@@ -1,14 +1,17 @@
 package org.folio.service.orders.flows.update.open;
 
-import static java.util.stream.Collectors.toList;
 import static org.folio.orders.utils.HelperUtils.calculateInventoryItemsQuantity;
 import static org.folio.orders.utils.HelperUtils.collectResultsOnSuccess;
+import static org.folio.orders.utils.RequestContextUtil.createContextWithNewTenantId;
 
 import java.util.ArrayList;
+import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletionException;
 
+import io.vertx.core.Future;
+import io.vertx.core.json.JsonObject;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -19,23 +22,22 @@ import org.folio.orders.utils.ProtectedOperationType;
 import org.folio.rest.core.exceptions.InventoryException;
 import org.folio.rest.core.models.RequestContext;
 import org.folio.rest.jaxrs.model.CompositePoLine;
-import org.folio.rest.jaxrs.model.Location;
+import org.folio.rest.jaxrs.model.CompositePurchaseOrder;
 import org.folio.rest.jaxrs.model.Piece;
+import org.folio.rest.jaxrs.model.Title;
 import org.folio.service.ProtectionService;
-import org.folio.service.inventory.InventoryManager;
+import org.folio.service.inventory.InventoryHoldingManager;
+import org.folio.service.inventory.InventoryItemManager;
 import org.folio.service.orders.PurchaseOrderStorageService;
 import org.folio.service.pieces.PieceChangeReceiptStatusPublisher;
 import org.folio.service.pieces.PieceStorageService;
 import org.folio.service.titles.TitlesService;
 
-import io.vertx.core.Future;
-import io.vertx.core.Promise;
-import io.vertx.core.json.JsonObject;
-
 public class OpenCompositeOrderPieceService {
   private static final Logger logger = LogManager.getLogger(OpenCompositeOrderPieceService.class);
 
-  private final InventoryManager inventoryManager;
+  private final InventoryItemManager inventoryItemManager;
+  private final InventoryHoldingManager inventoryHoldingManager;
   private final PieceStorageService pieceStorageService;
   private final PieceChangeReceiptStatusPublisher receiptStatusPublisher;
   private final PurchaseOrderStorageService purchaseOrderStorageService;
@@ -44,13 +46,19 @@ public class OpenCompositeOrderPieceService {
   private final TitlesService titlesService;
 
   public OpenCompositeOrderPieceService(PurchaseOrderStorageService purchaseOrderStorageService,
-        PieceStorageService pieceStorageService, ProtectionService protectionService, PieceChangeReceiptStatusPublisher receiptStatusPublisher,
-        InventoryManager inventoryManager, TitlesService titlesService, OpenCompositeOrderHolderBuilder openCompositeOrderHolderBuilder) {
+                                        PieceStorageService pieceStorageService,
+                                        ProtectionService protectionService,
+                                        PieceChangeReceiptStatusPublisher receiptStatusPublisher,
+                                        InventoryItemManager inventoryItemManager,
+                                        InventoryHoldingManager inventoryHoldingManager,
+                                        TitlesService titlesService,
+                                        OpenCompositeOrderHolderBuilder openCompositeOrderHolderBuilder) {
     this.purchaseOrderStorageService = purchaseOrderStorageService;
     this.pieceStorageService = pieceStorageService;
     this.protectionService = protectionService;
     this.receiptStatusPublisher = receiptStatusPublisher;
-    this.inventoryManager = inventoryManager;
+    this.inventoryItemManager = inventoryItemManager;
+    this.inventoryHoldingManager = inventoryHoldingManager;
     this.titlesService = titlesService;
     this.openCompositeOrderHolderBuilder = openCompositeOrderHolderBuilder;
   }
@@ -63,94 +71,78 @@ public class OpenCompositeOrderPieceService {
    * @return void future
    */
   public Future<List<Piece>> handlePieces(CompositePoLine compPOL, String titleId, List<Piece> expectedPiecesWithItem,
-                                                     boolean isInstanceMatchingDisabled, RequestContext requestContext) {
-    logger.debug("Get pieces by poLine ID");
+                                          boolean isInstanceMatchingDisabled, RequestContext requestContext) {
+    logger.debug("handlePieces:: Get pieces by poLine ID - {}", compPOL.getId());
     return openCompositeOrderHolderBuilder.buildHolder(compPOL, titleId, expectedPiecesWithItem, requestContext)
       .compose(holder -> {
-        if (CollectionUtils.isNotEmpty(holder.getPiecesWithLocationToProcess()) &&
-                       (holder.getPiecesWithChangedLocation().size() == holder.getPiecesWithLocationToProcess().size())) {
-          return updatePieces(holder, requestContext);
-        } else {
-          return createPieces(holder, isInstanceMatchingDisabled, requestContext);
+        var piecesWithChangedLocation = holder.getPiecesWithChangedLocation();
+        if (CollectionUtils.isEmpty(piecesWithChangedLocation) || piecesWithChangedLocation.size() != holder.getPiecesWithLocationToProcess().size()) {
+          return purchaseOrderStorageService.getCompositeOrderById(compPOL.getPurchaseOrderId(), requestContext)
+            .compose(order -> createPieces(holder, order, isInstanceMatchingDisabled, requestContext));
         }
+        return updatePieces(holder, requestContext);
       })
-      .map(pieces -> {
-        int createdItemsQuantity = expectedPiecesWithItem.size();
-        validateItemsCreation(compPOL, createdItemsQuantity);
-        return pieces;
-      });
+      .map(pieces -> validateItemsCreationForPieces(pieces, compPOL, expectedPiecesWithItem.size()));
   }
 
   private Future<List<Piece>> updatePieces(OpenOrderPieceHolder holder, RequestContext requestContext) {
-    List<Future<Piece>> updateFutures = holder.getPiecesWithChangedLocation().stream()
-      .map(piece -> updatePieceRecord(piece, requestContext).map(v -> piece))
-      .collect(toList());
-    return collectResultsOnSuccess(updateFutures);
+    logger.debug("updatePieces:: Trying to update pieces");
+    return collectResultsOnSuccess(holder.getPiecesWithChangedLocation().stream()
+      .map(piece -> updatePiece(piece, requestContext))
+      .toList());
   }
 
-  private Future<List<Piece>> createPieces(OpenOrderPieceHolder holder, boolean isInstanceMatchingDisabled, RequestContext requestContext) {
+  private Future<List<Piece>> createPieces(OpenOrderPieceHolder holder, CompositePurchaseOrder order, boolean isInstanceMatchingDisabled, RequestContext requestContext) {
+    logger.debug("createPieces:: Trying to create pieces");
     List<Piece> piecesToCreate = new ArrayList<>(holder.getPiecesWithLocationToProcess());
     piecesToCreate.addAll(holder.getPiecesWithHoldingToProcess());
     piecesToCreate.addAll(holder.getPiecesWithoutLocationId());
-    piecesToCreate.forEach(piece -> piece.setTitleId(holder.getTitleId()));
-    logger.debug("Trying to create pieces");
-    List<Future<Piece>> piecesToCreateFutures = new ArrayList<>();
-    piecesToCreate.forEach(piece ->
-      piecesToCreateFutures.add(createPiece(piece, isInstanceMatchingDisabled, requestContext))
-    );
+
+    var piecesToCreateFutures = piecesToCreate.stream()
+      .map(piece -> piece.withTitleId(holder.getTitleId()))
+      .map(piece -> createPiece(piece, order, isInstanceMatchingDisabled, requestContext))
+      .toList();
     return collectResultsOnSuccess(piecesToCreateFutures)
        .recover(th -> {
-        logger.error("Piece creation error");
-        throw new CompletionException("Piece creation error", th);
+         logger.error("Piece creation failed", th);
+         throw new CompletionException("Piece creation error", th);
       });
   }
 
-  public Future<Piece> createPiece(Piece piece, boolean isInstanceMatchingDisabled, RequestContext requestContext) {
-    logger.debug("createPiece start");
-    return purchaseOrderStorageService.getCompositeOrderByPoLineId(piece.getPoLineId(), requestContext)
-      .compose(order -> protectionService.isOperationRestricted(order.getAcqUnitIds(), ProtectedOperationType.CREATE, requestContext)
-        .map(v -> order))
-      .compose(order -> openOrderUpdateInventory(order.getCompositePoLines().get(0), piece, isInstanceMatchingDisabled, requestContext))
+  public Future<Piece> createPiece(Piece piece, CompositePurchaseOrder order, boolean isInstanceMatchingDisabled, RequestContext requestContext) {
+    logger.debug("createPiece:: Creating piece - {}", piece.getId());
+    return titlesService.getTitleById(piece.getTitleId(), requestContext)
+      .compose(title -> protectionService.isOperationRestricted(title.getAcqUnitIds(), ProtectedOperationType.CREATE, requestContext))
+      .compose(v -> openOrderUpdateInventory(order, order.getCompositePoLines().get(0), piece, isInstanceMatchingDisabled, requestContext))
       .compose(v -> pieceStorageService.insertPiece(piece, requestContext));
   }
 
-  public Future<Void> updatePieceRecord(Piece piece, RequestContext requestContext) {
-    Promise<Void> promise = Promise.promise();
-    purchaseOrderStorageService.getCompositeOrderByPoLineId(piece.getPoLineId(), requestContext)
-      .compose(order -> protectionService.isOperationRestricted(order.getAcqUnitIds(), ProtectedOperationType.UPDATE, requestContext))
-      .compose(v -> inventoryManager.updateItemWithPieceFields(piece, requestContext))
-      .onSuccess(vVoid ->
-        pieceStorageService.getPieceById(piece.getId(), requestContext).onSuccess(pieceStorage -> {
-            Piece.ReceivingStatus receivingStatusStorage = pieceStorage.getReceivingStatus();
-            pieceStorageService.updatePiece(piece, requestContext)
-              .onSuccess(ok -> {
-                promise.complete();
-                JsonObject messageToEventBus = new JsonObject();
-                messageToEventBus.put("poLineIdUpdate", piece.getPoLineId());
-
-                Piece.ReceivingStatus receivingStatusUpdate = piece.getReceivingStatus();
-                logger.debug("receivingStatusStorage -- {}", receivingStatusStorage);
-                logger.debug("receivingStatusUpdate -- {}", receivingStatusUpdate);
-
-                if (receivingStatusStorage.compareTo(receivingStatusUpdate) != 0) {
-                  receiptStatusPublisher.sendEvent(MessageAddress.RECEIPT_STATUS, messageToEventBus, requestContext);
-                }
-              })
-              .onFailure(e -> {
-                logger.error("Error updating piece by id to storage {}", piece.getId(), e);
-                promise.fail(e);
-              });
+  public Future<Piece> updatePiece(Piece piece, RequestContext requestContext) {
+    logger.debug("updatePiece:: Updating piece - {}", piece.getId());
+    return titlesService.getTitleById(piece.getTitleId(), requestContext)
+      .compose(title -> protectionService.isOperationRestricted(title.getAcqUnitIds(), ProtectedOperationType.UPDATE, requestContext))
+      .compose(v -> inventoryItemManager.updateItemWithPieceFields(piece, requestContext))
+      .compose(vVoid -> pieceStorageService.getPieceById(piece.getId(), requestContext))
+      .compose(pieceStorage -> {
+        var receivingStatusUpdate = piece.getReceivingStatus();
+        var receivingStatusStorage = pieceStorage.getReceivingStatus();
+        boolean isReceivingStatusChanged = !receivingStatusStorage.equals(receivingStatusUpdate);
+        if (isReceivingStatusChanged) {
+          piece.setStatusUpdatedDate(new Date());
+        }
+        return pieceStorageService.updatePiece(piece, requestContext)
+          .compose(v -> {
+            logger.debug("updatePiece:: receivingStatusStorage - {}, receivingStatusUpdate - {}", receivingStatusStorage, receivingStatusUpdate);
+            if (isReceivingStatusChanged) {
+              var messageToEventBus = JsonObject.of("poLineIdUpdate", piece.getPoLineId());
+              receiptStatusPublisher.sendEvent(MessageAddress.RECEIPT_STATUS, messageToEventBus, requestContext);
+            }
+            return Future.succeededFuture();
           })
-          .onFailure(e -> {
-            logger.error("Error getting piece by id from storage {}", piece.getId(), e);
-            promise.fail(e);
-          })
-      )
-      .onFailure(t -> {
-        logger.error("User to update piece with id={}", piece.getId(), t.getCause());
-         promise.fail(t);
-      });
-    return promise.future();
+          .onFailure(e -> logger.error("Error updating piece by id to storage {}", piece.getId(), e));
+      })
+      .onFailure(e -> logger.error("Error getting piece by id from storage {}", piece.getId(), e))
+      .map(v -> piece);
   }
 
   /**
@@ -159,45 +151,41 @@ public class OpenCompositeOrderPieceService {
    * @param compPOL Composite PO line to update Inventory for
    * @return CompletableFuture with void.
    */
-  public Future<Void> openOrderUpdateInventory(CompositePoLine compPOL, Piece piece, boolean isInstanceMatchingDisabled, RequestContext requestContext) {
-    if (Boolean.TRUE.equals(compPOL.getIsPackage())) {
-      return titlesService.getTitleById(piece.getTitleId(), requestContext)
-        .compose(title -> inventoryManager.openOrderHandlePackageLineInstance(title, isInstanceMatchingDisabled, requestContext))
-        .compose(title -> titlesService.saveTitle(title, requestContext).map(json -> title))
-        .compose(title ->
-        {
-          if (piece.getHoldingId() != null) {
-            return Future.succeededFuture(piece.getHoldingId());
-          }
-          return inventoryManager.handleHoldingsRecord(compPOL, new Location().withLocationId(piece.getLocationId()), title.getInstanceId(), requestContext)
-            .map(holdingId -> {
-              piece.setLocationId(null);
-              piece.setHoldingId(holdingId);
-              return holdingId;
-            });
-        })
-        .compose(holdingId -> {
-          if (PoLineCommonUtil.isItemsUpdateRequired(compPOL)) {
-            return inventoryManager.openOrderCreateItemRecord(compPOL, holdingId, requestContext);
-          }
-          return Future.succeededFuture();
-        })
-        .onSuccess(itemId -> Optional.ofNullable(itemId).ifPresent(piece::withItemId))
-        .mapEmpty();
+  public Future<Void> openOrderUpdateInventory(CompositePurchaseOrder compPO, CompositePoLine compPOL,
+                                               Piece piece, boolean isInstanceMatchingDisabled, RequestContext requestContext) {
+    if (!Boolean.TRUE.equals(compPOL.getIsPackage())) {
+      return inventoryItemManager.updateItemWithPieceFields(piece, requestContext);
     }
-    else
-    {
-      return inventoryManager.updateItemWithPieceFields(piece, requestContext);
-    }
+    var locationContext = createContextWithNewTenantId(requestContext, piece.getReceivingTenantId());
+    return titlesService.getTitleById(piece.getTitleId(), requestContext)
+      .compose(title -> titlesService.updateTitleWithInstance(title, isInstanceMatchingDisabled, locationContext, requestContext).map(title::withInstanceId))
+      .compose(title -> getOrCreateHolding(compPOL, piece, title, locationContext))
+      .compose(holdingId -> updateItemsIfNeeded(compPO, compPOL, holdingId, locationContext))
+      .map(itemId -> Optional.ofNullable(itemId).map(piece::withItemId))
+      .mapEmpty();
   }
 
-
-  private void validateItemsCreation(CompositePoLine compPOL, int itemsSize) {
-    int expectedItemsQuantity = calculateInventoryItemsQuantity(compPOL);
-    if (itemsSize != expectedItemsQuantity) {
-      String message = String.format("Error creating items for PO Line with '%s' id. Expected %d but %d created",
-        compPOL.getId(), expectedItemsQuantity, itemsSize);
-      throw new InventoryException(message);
+  private Future<String> getOrCreateHolding(CompositePoLine compPOL, Piece piece, Title title, RequestContext locationContext) {
+    if (piece.getHoldingId() != null || !PoLineCommonUtil.isHoldingsUpdateRequired(compPOL)) {
+      return Future.succeededFuture(piece.getHoldingId());
     }
+    return inventoryHoldingManager.createHoldingAndReturnId(title.getInstanceId(), piece.getLocationId(), locationContext)
+      .map(holdingId -> piece.withLocationId(null).withHoldingId(holdingId).getHoldingId());
+  }
+
+  private Future<String> updateItemsIfNeeded(CompositePurchaseOrder compPO, CompositePoLine compPOL,
+                                             String holdingId, RequestContext locationContext) {
+    return PoLineCommonUtil.isItemsUpdateRequired(compPOL)
+      ? inventoryItemManager.openOrderCreateItemRecord(compPO, compPOL, holdingId, locationContext)
+      : Future.succeededFuture();
+  }
+
+  private List<Piece> validateItemsCreationForPieces(List<Piece> pieces, CompositePoLine compPOL, int itemsSize) {
+    int expectedItemsQuantity = calculateInventoryItemsQuantity(compPOL);
+    if (itemsSize == expectedItemsQuantity) {
+      return pieces;
+    }
+    throw new InventoryException(String.format("Error creating items for PO Line with '%s' id. Expected %d but %d created",
+      compPOL.getId(), expectedItemsQuantity, itemsSize));
   }
 }
