@@ -2,19 +2,18 @@ package org.folio.service.orders.flows.update.unopen;
 
 import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.toList;
-import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 import static org.folio.orders.utils.HelperUtils.collectResultsOnSuccess;
-import static org.folio.orders.utils.PoLineCommonUtil.isOnlyInstanceUpdateRequired;
 import static org.folio.orders.utils.ProtectedOperationType.DELETE;
-import static org.folio.service.inventory.InventoryManager.HOLDING_PERMANENT_LOCATION_ID;
-import static org.folio.service.inventory.InventoryManager.ID;
-import static org.folio.service.inventory.InventoryManager.ITEM_EFFECTIVE_LOCATION;
-import static org.folio.service.inventory.InventoryManager.ITEM_HOLDINGS_RECORD_ID;
-import static org.folio.service.inventory.InventoryManager.ITEM_STATUS;
-import static org.folio.service.inventory.InventoryManager.ITEM_STATUS_NAME;
+import static org.folio.orders.utils.RequestContextUtil.createContextWithNewTenantId;
+import static org.folio.service.inventory.InventoryHoldingManager.HOLDING_PERMANENT_LOCATION_ID;
+import static org.folio.service.inventory.InventoryItemManager.ID;
+import static org.folio.service.inventory.InventoryItemManager.ITEM_EFFECTIVE_LOCATION;
+import static org.folio.service.inventory.InventoryItemManager.ITEM_HOLDINGS_RECORD_ID;
+import static org.folio.service.inventory.InventoryItemManager.ITEM_STATUS;
+import static org.folio.service.inventory.InventoryItemManager.ITEM_STATUS_NAME;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -39,9 +38,11 @@ import org.folio.rest.jaxrs.model.CompositePoLine;
 import org.folio.rest.jaxrs.model.CompositePurchaseOrder;
 import org.folio.rest.jaxrs.model.Location;
 import org.folio.rest.jaxrs.model.Piece;
+import org.folio.service.CirculationRequestsRetriever;
 import org.folio.service.ProtectionService;
 import org.folio.service.finance.transaction.EncumbranceWorkflowStrategyFactory;
-import org.folio.service.inventory.InventoryManager;
+import org.folio.service.inventory.InventoryHoldingManager;
+import org.folio.service.inventory.InventoryItemManager;
 import org.folio.service.orders.OrderWorkflowType;
 import org.folio.service.orders.PurchaseOrderLineService;
 import org.folio.service.orders.PurchaseOrderStorageService;
@@ -52,25 +53,36 @@ import io.vertx.core.json.JsonObject;
 
 public class UnOpenCompositeOrderManager {
   private static final Logger logger = LogManager.getLogger(UnOpenCompositeOrderManager.class);
+  private static final EnumSet<CompositePoLine.PaymentStatus> SUPPORTED_PAYMENT_STATUSES =
+    EnumSet.of(CompositePoLine.PaymentStatus.AWAITING_PAYMENT, CompositePoLine.PaymentStatus.ONGOING);
+  private static final EnumSet<CompositePoLine.ReceiptStatus> SUPPORTED_RECEIPT_STATUSES =
+    EnumSet.of(CompositePoLine.ReceiptStatus.AWAITING_RECEIPT, CompositePoLine.ReceiptStatus.ONGOING);
 
   private final PurchaseOrderStorageService purchaseOrderStorageService;
   private final PurchaseOrderLineService purchaseOrderLineService;
   private final EncumbranceWorkflowStrategyFactory encumbranceWorkflowStrategyFactory;
-  private final InventoryManager inventoryManager;
+  private final InventoryItemManager inventoryItemManager;
+  private final InventoryHoldingManager inventoryHoldingManager;
   private final PieceStorageService pieceStorageService;
   private final ProtectionService protectionService;
+  private final CirculationRequestsRetriever circulationRequestsRetriever;
 
   public UnOpenCompositeOrderManager(PurchaseOrderLineService purchaseOrderLineService,
-                                      EncumbranceWorkflowStrategyFactory encumbranceWorkflowStrategyFactory,
-                                      InventoryManager inventoryManager, PieceStorageService pieceStorageService,
-                                      PurchaseOrderStorageService purchaseOrderStorageService,
-                                      ProtectionService protectionService) {
+                                     EncumbranceWorkflowStrategyFactory encumbranceWorkflowStrategyFactory,
+                                     InventoryItemManager inventoryItemManager,
+                                     InventoryHoldingManager inventoryHoldingManager,
+                                     PieceStorageService pieceStorageService,
+                                     PurchaseOrderStorageService purchaseOrderStorageService,
+                                     ProtectionService protectionService,
+                                     CirculationRequestsRetriever circulationRequestsRetriever) {
     this.purchaseOrderLineService = purchaseOrderLineService;
     this.encumbranceWorkflowStrategyFactory = encumbranceWorkflowStrategyFactory;
-    this.inventoryManager = inventoryManager;
+    this.inventoryItemManager = inventoryItemManager;
+    this.inventoryHoldingManager = inventoryHoldingManager;
     this.pieceStorageService = pieceStorageService;
     this.purchaseOrderStorageService = purchaseOrderStorageService;
     this.protectionService = protectionService;
+    this.circulationRequestsRetriever = circulationRequestsRetriever;
   }
 
 
@@ -78,40 +90,68 @@ public class UnOpenCompositeOrderManager {
     return updateAndGetOrderWithLines(compPO, requestContext)
       .map(aVoid -> encumbranceWorkflowStrategyFactory.getStrategy(OrderWorkflowType.OPEN_TO_PENDING))
       .compose(strategy -> strategy.processEncumbrances(compPO, poFromStorage, requestContext))
+      .compose(ok -> processInventory(compPO.getCompositePoLines(), deleteHoldings, requestContext))
       .map(ok -> {
-        PoLineCommonUtil.makePoLinesPending(compPO.getCompositePoLines());
+        compPO.getCompositePoLines().forEach(this::makePoLinePending);
         return null;
       })
-      .compose(ok -> updatePoLinesSummary(compPO.getCompositePoLines(), requestContext))
-      .compose(ok -> processInventory(compPO.getCompositePoLines(), deleteHoldings, requestContext));
+      .compose(ok -> updatePoLinesSummary(compPO.getCompositePoLines(), requestContext));
 
   }
 
-  public Future<Void> updatePoLinesSummary(List<CompositePoLine> compositePoLines, RequestContext requestContext) {
+  private Future<CompositePurchaseOrder> updateAndGetOrderWithLines(CompositePurchaseOrder compPO, RequestContext requestContext) {
+    if (CollectionUtils.isNotEmpty(compPO.getCompositePoLines())) {
+      return Future.succeededFuture(compPO);
+    }
+    return purchaseOrderLineService.getCompositePoLinesByOrderId(compPO.getId(), requestContext)
+      .map(poLines -> {
+        PoLineCommonUtil.sortPoLinesByPoLineNumber(poLines);
+        return compPO.withCompositePoLines(poLines);
+      })
+      .map(v -> compPO);
+  }
+
+  private void makePoLinePending(CompositePoLine poLine) {
+    if (SUPPORTED_PAYMENT_STATUSES.contains(poLine.getPaymentStatus())) {
+      poLine.setPaymentStatus(CompositePoLine.PaymentStatus.PENDING);
+    }
+    if (SUPPORTED_RECEIPT_STATUSES.contains(poLine.getReceiptStatus())) {
+      poLine.setReceiptStatus(CompositePoLine.ReceiptStatus.PENDING);
+    }
+  }
+
+  private Future<Void> updatePoLinesSummary(List<CompositePoLine> compositePoLines, RequestContext requestContext) {
     return GenericCompositeFuture.join(compositePoLines.stream()
-      .map(HelperUtils::convertToPoLine)
-      .map(line -> purchaseOrderLineService.saveOrderLine(line, requestContext))
-      .collect(toList()))
+        .map(HelperUtils::convertToPoLine)
+        .map(line -> purchaseOrderLineService.saveOrderLine(line, requestContext))
+        .collect(toList()))
       .map(ok -> null);
   }
 
+  public Future<Void> rollbackInventory(CompositePurchaseOrder compPO, RequestContext requestContext) {
+    return processInventory(compPO.getCompositePoLines(), true, requestContext);
+  }
+
   private Future<Void> processInventory(List<CompositePoLine> compositePoLines, boolean deleteHoldings, RequestContext requestContext) {
-    return GenericCompositeFuture.join(compositePoLines.stream()
-      .map(line -> processInventory(line, deleteHoldings, requestContext))
-        .collect(toList()))
+    return GenericCompositeFuture.join(
+        compositePoLines
+          .stream()
+          .map(line -> processInventory(line, deleteHoldings, requestContext))
+          .toList()
+      )
       .mapEmpty();
   }
 
   /**
    * Processes inventory.
-   *
+   * <p>
    * PO Line checkinItems has the following values: (synchronized - false, independent - true)
    * deleteHoldings == true && workflow synchronized => delete holdings and items
    * deleteHoldings == false && workflow synchronized => delete items
    * deleteHoldings == true && workflow independent => delete holdings
    * deleteHoldings == false && workflow independent => do nothing
    *
-   * @param compPOL the purchase order
+   * @param compPOL        the purchase order
    * @param deleteHoldings delete holdings flag
    * @param requestContext the request context
    * @return future with void
@@ -120,149 +160,71 @@ public class UnOpenCompositeOrderManager {
     if (Boolean.TRUE.equals(compPOL.getIsPackage())) {
       return Future.succeededFuture();
     }
-    if (PoLineCommonUtil.isInventoryUpdateNotRequired(compPOL) || isOnlyInstanceUpdateRequired(compPOL)) {
+    if (PoLineCommonUtil.isInventoryUpdateNotRequired(compPOL) || PoLineCommonUtil.isOnlyInstanceUpdateRequired(compPOL)) {
       return deleteExpectedPieces(compPOL, requestContext).onSuccess(pieces -> {
-        if (logger.isDebugEnabled()) {
-          String deletedIds = pieces.stream().map(Piece::getId).collect(Collectors.joining(","));
-          logger.debug(String.format("Pieces were removed : %s", deletedIds));
-        }
-      })
-      .mapEmpty();
-    } else if (PoLineCommonUtil.isItemsUpdateRequired(compPOL)) {
-        if (compPOL.getCheckinItems()) { // independent workflow
-          return (deleteHoldings) ? processInventoryOnlyWithHolding(compPOL, requestContext) : Future.succeededFuture();
-        } else { // synchronized workflow
-          return (deleteHoldings) ? processInventoryHoldingWithItems(compPOL, requestContext) : processInventoryOnlyWithItems(compPOL, requestContext);
-        }
-    } else if (PoLineCommonUtil.isHoldingsUpdateRequired(compPOL)) {
-        if (compPOL.getCheckinItems()) { // independent workflow
-          return (deleteHoldings) ? processInventoryOnlyWithHolding(compPOL, requestContext) : Future.succeededFuture();
-        } else { // synchronized workflow
-          return processInventoryOnlyWithHolding(compPOL, requestContext);
-        }
+          if (logger.isDebugEnabled()) {
+            String deletedIds = pieces.stream().map(Piece::getId).collect(Collectors.joining(","));
+            logger.debug(String.format("Pieces were removed : %s", deletedIds));
+          }
+        })
+        .mapEmpty();
+    }
+    if (PoLineCommonUtil.isItemsUpdateRequired(compPOL)) {
+      if (compPOL.getCheckinItems()) { // independent workflow
+        return (deleteHoldings) ? processInventoryOnlyWithHolding(compPOL, requestContext) : Future.succeededFuture();
+      } else { // synchronized workflow
+        return (deleteHoldings) ? processInventoryHoldingWithItems(compPOL, requestContext) : processInventoryOnlyWithItems(compPOL, requestContext);
+      }
+    }
+    if (PoLineCommonUtil.isHoldingsUpdateRequired(compPOL)) {
+      if (compPOL.getCheckinItems()) { // independent workflow
+        return (deleteHoldings) ? processInventoryOnlyWithHolding(compPOL, requestContext) : Future.succeededFuture();
+      } else { // synchronized workflow
+        return (deleteHoldings) ? processInventoryOnlyWithHolding(compPOL, requestContext) :
+          deleteExpectedPieces(compPOL, requestContext).mapEmpty();
+      }
     }
 
     return Future.succeededFuture();
   }
 
+
   private Future<Void> processInventoryOnlyWithHolding(CompositePoLine compPOL, RequestContext requestContext) {
     return deleteExpectedPieces(compPOL, requestContext)
       .compose(deletedPieces -> {
-        List<String> holdingIds = compPOL.getLocations().stream()
-          .map(Location::getHoldingId)
-          .filter(Objects::nonNull)
-          .collect(toList());
-        return inventoryManager.getHoldingsByIds(holdingIds, requestContext);
-      })
-      .compose(holdings -> deleteHoldings(holdings, requestContext))
-      .map(deletedHoldingVsLocationIds -> {
-        updateLocations(compPOL, deletedHoldingVsLocationIds);
-        return null;
+        var deleteHoldingsVsLocations = inventoryHoldingManager.getHoldingsByLocationTenants(compPOL, requestContext)
+          .entrySet()
+          .stream()
+          .map(entry -> entry.getValue().compose(holdings -> deleteHoldings(entry.getKey(), holdings, requestContext)))
+          .toList();
+        return GenericCompositeFuture.all(deleteHoldingsVsLocations).map(ar -> {
+          var deletedHoldingVsLocationIds = deleteHoldingsVsLocations.stream()
+            .map(Future::result)
+            .flatMap(List::stream)
+            .toList();
+          updateLocations(compPOL, deletedHoldingVsLocationIds);
+          return null;
+        });
       })
       .onSuccess(v -> logger.debug("Pieces, Holdings deleted after UnOpen order"))
       .mapEmpty();
   }
 
-  private Future<Void> processInventoryOnlyWithItems(CompositePoLine compPOL, RequestContext requestContext) {
-    if (!PoLineCommonUtil.isReceiptNotRequired(compPOL.getReceiptStatus())) {
-      logger.info("Skip deleting items and pieces for Un-Open order with id: {} because receipt can be required", compPOL.getId());
-      return Future.succeededFuture();
+  private Future<List<Pair<String, String>>> deleteHoldings(String tenantId, List<JsonObject> holdings, RequestContext requestContext) {
+    if (CollectionUtils.isEmpty(holdings)) {
+      return Future.succeededFuture(List.of());
     }
-    return deleteExpectedPieces(compPOL, requestContext)
-      .compose(deletedPieces ->
-        inventoryManager.getItemsByPoLineIdsAndStatus(List.of(compPOL.getId()), ItemStatus.ON_ORDER.value(), requestContext)
-          .compose(onOrderItems -> {
-            if (isNotEmpty(onOrderItems)) {
-              List<String> itemIds = onOrderItems.stream().map(item -> item.getString(ID)).collect(toList());
-              return inventoryManager.deleteItems(itemIds,  false, requestContext);
-            }
-            return Future.succeededFuture();
-          })
-          .onSuccess(v -> logger.info("Items and pieces deleted after Un-Open order with id: {}", compPOL.getId()))
-          .onFailure(e -> logger.error("Items and pieces deletion failed after Un-Open order with id: {}", compPOL.getId(), e))
-      ).mapEmpty();
-  }
-
-  private Future<List<Piece>> deleteExpectedPieces(CompositePoLine compPOL, RequestContext requestContext) {
-    if (!PoLineCommonUtil.isReceiptNotRequired(compPOL.getReceiptStatus()) && Boolean.FALSE.equals(compPOL.getCheckinItems())) {
-      return pieceStorageService.getExpectedPiecesByLineId(compPOL.getId(), requestContext)
-        .compose(pieceCollection -> {
-          if (isNotEmpty(pieceCollection.getPieces())) {
-            return pieceStorageService.deletePiecesByIds(pieceCollection.getPieces().stream().map(Piece::getId).collect(toList()), requestContext)
-                                .map(v -> pieceCollection.getPieces());
-          }
-          return Future.succeededFuture(Collections.emptyList());
-        });
-    }
-    return Future.succeededFuture(Collections.emptyList());
-  }
-
-  private Future<Void> processInventoryHoldingWithItems(CompositePoLine compPOL, RequestContext requestContext) {
-    return inventoryManager.getItemsByPoLineIdsAndStatus(List.of(compPOL.getId()), ItemStatus.ON_ORDER.value(), requestContext)
-                          .compose(onOrderItems -> {
-                            if (isNotEmpty(onOrderItems)) {
-                              List<String> itemIds = onOrderItems.stream().map(item -> item.getString(ID)).collect(toList());
-                              if (PoLineCommonUtil.isReceiptNotRequired(compPOL.getReceiptStatus())) {
-                                return inventoryManager.deleteItems(itemIds,  false, requestContext)
-                                              .compose(deletedItemIds -> deleteHoldingsByItems(onOrderItems, requestContext))
-                                  .map(deletedHoldingVsLocationIds -> {
-                                    updateLocations(compPOL, deletedHoldingVsLocationIds);
-                                    return null;
-                                  })
-                                  .onSuccess(v -> logger.debug("Items and holdings deleted after UnOpen order"))
-                                  .mapEmpty();
-                              }
-                              return pieceStorageService.getExpectedPiecesByLineId(compPOL.getId(), requestContext)
-                                .compose(pieceCollection -> {
-                                  if (isNotEmpty(pieceCollection.getPieces())) {
-                                    return inventoryManager.getItemRecordsByIds(itemIds, requestContext)
-                                      .map(items -> getItemsByStatus(items, ItemStatus.ON_ORDER.value()))
-                                      .compose(onOrderItemsP -> deletePiecesAndItems(onOrderItemsP, pieceCollection.getPieces(), requestContext))
-                                      .compose(deletedItems -> deleteHoldingsByItems(deletedItems, requestContext))
-                                      .map(deletedHoldingVsLocationIds -> {
-                                        updateLocations(compPOL, deletedHoldingVsLocationIds);
-                                        return null;
-                                      })
-                                      .onSuccess(v -> logger.debug("Pieces, Items, Holdings deleted after UnOpen order"))
-                                      .mapEmpty();
-                                  }
-                                  return Future.succeededFuture();
-                                });
-                            }
-                            return Future.succeededFuture();
-                          });
-  }
-
-  private void updateLocations(CompositePoLine compPOL, List<Pair<String, String>> deletedHoldingVsLocationIds) {
-    if (CollectionUtils.isNotEmpty(deletedHoldingVsLocationIds)) {
-      Map<String, List<Location>> holdingIdVsLocations = compPOL.getLocations().stream().collect(groupingBy(Location::getHoldingId));
-      deletedHoldingVsLocationIds.forEach(holdingIdVsLocationId -> {
-        String holdingId = holdingIdVsLocationId.getKey();
-        String locationId = holdingIdVsLocationId.getValue();
-        List<Location> locations = holdingIdVsLocations.get(holdingId);
-        if (CollectionUtils.isNotEmpty(locations)) {
-          locations.forEach(location -> {
-            location.setHoldingId(null);
-            location.setLocationId(locationId);
-          });
-        }
-      });
-    }
-  }
-
-  private Future<List<Pair<String, String>>> deleteHoldingsByItems(List<JsonObject> deletedItems, RequestContext requestContext) {
-    List<Future<Pair<String, String>>> deletedHoldingIds = new ArrayList<>(deletedItems.size());
-    var holdingIdVsItemMap = deletedItems.stream()
-                                        .collect(groupingBy(item -> Optional.ofNullable(item.getString(ITEM_HOLDINGS_RECORD_ID)) ));
-    holdingIdVsItemMap.forEach((optionalHoldingId, holdingDeletedItems) -> {
-      if (optionalHoldingId.isPresent()) {
-        String holdingId = optionalHoldingId.get();
-        String effectiveLocationId = holdingDeletedItems.get(0).getJsonObject(ITEM_EFFECTIVE_LOCATION).getString(ID);
-        deletedHoldingIds.add(inventoryManager.getItemsByHoldingId(holdingId, requestContext)
+    RequestContext newContext = createContextWithNewTenantId(requestContext, tenantId);
+    List<Future<Pair<String, String>>> deletedHoldingIds = new ArrayList<>(holdings.size());
+    holdings.forEach(holding -> {
+      String holdingId = holding.getString(ID);
+      String permanentLocationId = holding.getString(HOLDING_PERMANENT_LOCATION_ID);
+      if (holdingId != null) {
+        deletedHoldingIds.add(inventoryItemManager.getItemsByHoldingId(holdingId, newContext)
           .compose(items -> {
             if (items.isEmpty()) {
-              return inventoryManager.deleteHoldingById(holdingId, true, requestContext)
-                                     .map(v -> Pair.of(holdingId, effectiveLocationId));
+              return inventoryHoldingManager.deleteHoldingById(holdingId, true, newContext)
+                .map(v -> Pair.of(holdingId, permanentLocationId));
             }
             return Future.succeededFuture();
           }));
@@ -270,7 +232,114 @@ public class UnOpenCompositeOrderManager {
     });
     return collectResultsOnSuccess(deletedHoldingIds)
       .map(resultDeletedHoldingVsLocationIds -> resultDeletedHoldingVsLocationIds.stream()
-        .filter(pair -> Objects.nonNull(pair.getKey()))
+        .filter(pair -> Objects.nonNull(pair) && Objects.nonNull(pair.getKey())).collect(toList()))
+      .map(resultDeletedHoldingVsLocationIds -> {
+        if (logger.isDebugEnabled()) {
+          String deletedIds = resultDeletedHoldingVsLocationIds.stream().map(Pair::getKey).collect(Collectors.joining(","));
+          logger.debug(String.format("Holdings were removed : %s", deletedIds));
+        }
+        return resultDeletedHoldingVsLocationIds;
+      });
+  }
+
+
+  private Future<Void> processInventoryOnlyWithItems(CompositePoLine compPOL, RequestContext requestContext) {
+    return deleteExpectedPieces(compPOL, requestContext)
+      .compose(deletedPieces ->
+        GenericCompositeFuture.all(
+          PoLineCommonUtil.getTenantsFromLocations(compPOL)
+            .stream()
+            .map(tenantId -> processInventoryOnlyWithItemsForTenant(compPOL, createContextWithNewTenantId(requestContext, tenantId)))
+            .toList()
+        )
+      ).mapEmpty();
+  }
+
+  private Future<?> processInventoryOnlyWithItemsForTenant(CompositePoLine compPOL, RequestContext requestContext) {
+    return inventoryItemManager.getItemsByPoLineIdsAndStatus(List.of(compPOL.getId()), ItemStatus.ON_ORDER.value(), requestContext)
+      .compose(onOrderItems -> {
+        if (CollectionUtils.isEmpty(onOrderItems)) {
+          return Future.succeededFuture();
+        }
+        List<String> itemIds = onOrderItems.stream().map(item -> item.getString(ID)).toList();
+        return inventoryItemManager.deleteItems(itemIds, false, requestContext);
+      })
+      .onSuccess(v -> logger.info("Items and pieces deleted after Un-Open order with id: {}", compPOL.getId()))
+      .onFailure(e -> logger.error("Items and pieces deletion failed after Un-Open order with id: {}", compPOL.getId(), e));
+  }
+
+
+  private Future<Void> processInventoryHoldingWithItems(CompositePoLine compPOL, RequestContext requestContext) {
+    return GenericCompositeFuture.all(
+      PoLineCommonUtil.getTenantsFromLocations(compPOL)
+        .stream()
+        .map(tenantId -> processInventoryHoldingWithItemsForTenant(compPOL, requestContext, createContextWithNewTenantId(requestContext, tenantId)))
+        .toList()
+    ).mapEmpty();
+  }
+
+  private Future<Void> processInventoryHoldingWithItemsForTenant(CompositePoLine compPOL,
+                                                                 RequestContext centralTenantContext,
+                                                                 RequestContext locationContext) {
+    return inventoryItemManager.getItemsByPoLineIdsAndStatus(List.of(compPOL.getId()), ItemStatus.ON_ORDER.value(), locationContext)
+      .compose(onOrderItems -> {
+        if (CollectionUtils.isEmpty(onOrderItems)) {
+          return Future.succeededFuture();
+        }
+        List<String> itemIds = onOrderItems.stream().map(item -> item.getString(ID)).toList();
+        if (PoLineCommonUtil.isReceiptNotRequired(compPOL.getReceiptStatus())) {
+          return inventoryItemManager.deleteItems(itemIds, false, locationContext)
+            .compose(deletedItemIds -> deleteHoldingsByItems(onOrderItems, locationContext))
+            .map(deletedHoldingVsLocationIds -> {
+              updateLocations(compPOL, deletedHoldingVsLocationIds);
+              return null;
+            })
+            .onSuccess(v -> logger.debug("Items and holdings deleted after UnOpen order"))
+            .mapEmpty();
+        }
+        return pieceStorageService.getExpectedPiecesByLineId(compPOL.getId(), centralTenantContext)
+          .compose(pieceCollection -> {
+            if (CollectionUtils.isEmpty(pieceCollection.getPieces())) {
+              return Future.succeededFuture();
+            }
+            return inventoryItemManager.getItemRecordsByIds(itemIds, locationContext)
+              .map(items -> filterItemsByStatus(items, ItemStatus.ON_ORDER.value()))
+              .compose(onOrderItemsP -> deletePiecesAndItems(onOrderItemsP, pieceCollection.getPieces(), centralTenantContext, locationContext))
+              .compose(deletedItems -> deleteHoldingsByItems(deletedItems, locationContext))
+              .map(deletedHoldingVsLocationIds -> {
+                updateLocations(compPOL, deletedHoldingVsLocationIds);
+                return null;
+              })
+              .onSuccess(v -> logger.debug("Pieces, Items, Holdings deleted after UnOpen order"))
+              .onFailure(e -> logger.error("Pieces, Items, Holdings failed to be deleted after UnOpen order for order id: {}",
+                compPOL.getId(), e))
+              .mapEmpty();
+          });
+      });
+  }
+
+  private Future<List<Pair<String, String>>> deleteHoldingsByItems(List<JsonObject> deletedItems, RequestContext requestContext) {
+    List<Future<Pair<String, String>>> deletedHoldingIds = new ArrayList<>(deletedItems.size());
+    var holdingIdVsItemMap = deletedItems.stream()
+      .collect(groupingBy(item -> Optional.ofNullable(item.getString(ITEM_HOLDINGS_RECORD_ID))));
+    holdingIdVsItemMap.forEach((optionalHoldingId, holdingDeletedItems) -> {
+      if (optionalHoldingId.isEmpty()) {
+        return;
+      }
+      String holdingId = optionalHoldingId.get();
+      String effectiveLocationId = holdingDeletedItems.get(0).getJsonObject(ITEM_EFFECTIVE_LOCATION).getString(ID);
+      deletedHoldingIds.add(inventoryItemManager.getItemsByHoldingId(holdingId, requestContext)
+        .compose(items -> {
+          if (items.isEmpty()) {
+            return inventoryHoldingManager.deleteHoldingById(holdingId, true, requestContext)
+              .map(v -> Pair.of(holdingId, effectiveLocationId));
+          }
+          return Future.succeededFuture();
+        }));
+    });
+    return collectResultsOnSuccess(deletedHoldingIds)
+      .map(resultDeletedHoldingVsLocationIds -> resultDeletedHoldingVsLocationIds.stream()
+        .filter(pair -> Objects.nonNull(pair) && Objects.nonNull(pair.getKey()))
         .collect(toList()))
       .map(resultDeletedHoldingVsLocationIds -> {
         if (logger.isDebugEnabled()) {
@@ -283,50 +352,22 @@ public class UnOpenCompositeOrderManager {
       });
   }
 
-  private Future<List<Pair<String, String>>> deleteHoldings(List<JsonObject> holdings, RequestContext requestContext) {
-    if (CollectionUtils.isNotEmpty(holdings)) {
-      List<Future<Pair<String, String>>> deletedHoldingIds = new ArrayList<>(holdings.size());
-      holdings.forEach(holding -> {
-        String holdingId = holding.getString(ID);
-        String permanentLocationId = holding.getString(HOLDING_PERMANENT_LOCATION_ID);
-        if (holdingId != null) {
-          deletedHoldingIds.add(inventoryManager.getItemsByHoldingId(holdingId, requestContext)
-            .compose(items -> {
-              if (items.isEmpty()) {
-                return inventoryManager.deleteHoldingById(holdingId, true, requestContext)
-                  .map(v -> Pair.of(holdingId, permanentLocationId));
-              }
-              return Future.succeededFuture();
-            }));
-        }
-      });
-      return collectResultsOnSuccess(deletedHoldingIds)
-        .map(resultDeletedHoldingVsLocationIds -> resultDeletedHoldingVsLocationIds.stream()
-          .filter(pair -> Objects.nonNull(pair.getKey())).collect(toList()))
-        .map(resultDeletedHoldingVsLocationIds -> {
-          if (logger.isDebugEnabled()) {
-            String deletedIds = resultDeletedHoldingVsLocationIds.stream().map(Pair::getKey).collect(Collectors.joining(","));
-            logger.debug(String.format("Holdings were removed : %s", deletedIds));
-          }
-          return resultDeletedHoldingVsLocationIds;
-        });
-    }
-    return Future.succeededFuture(Collections.emptyList());
-  }
-
-  private Future<List<JsonObject>> deletePiecesAndItems(List<JsonObject> onOrderItems, List<Piece> pieces, RequestContext requestContext) {
+  private Future<List<JsonObject>> deletePiecesAndItems(List<JsonObject> onOrderItems,
+                                                        List<Piece> pieces,
+                                                        RequestContext centralTenantContext,
+                                                        RequestContext locationContext) {
     List<Future<JsonObject>> deletedItems = new ArrayList<>(onOrderItems.size());
     Map<Optional<String>, List<Piece>> itemIdVsPiece = pieces.stream().collect(groupingBy(piece -> Optional.ofNullable(piece.getItemId())));
     onOrderItems.forEach(onOrderItem -> {
       List<Piece> piecesWithItem = itemIdVsPiece.get(Optional.ofNullable(onOrderItem.getString(ID)));
       if (CollectionUtils.isNotEmpty(piecesWithItem)) {
-        piecesWithItem.forEach(piece -> deletedItems.add(deletePieceWithItem(piece.getId(), requestContext)
+        piecesWithItem.forEach(piece -> deletedItems.add(deletePieceWithItem(piece.getId(), centralTenantContext, locationContext)
           .map(v -> onOrderItem)));
       }
       List<Piece> piecesWithoutItem = itemIdVsPiece.get(Optional.empty());
       if (CollectionUtils.isNotEmpty(piecesWithoutItem)) {
         List<String> pieceIds = piecesWithoutItem.stream().map(Piece::getId).collect(toList());
-        piecesWithItem.forEach(piece -> deletedItems.add(pieceStorageService.deletePiecesByIds(pieceIds, requestContext)
+        piecesWithItem.forEach(piece -> deletedItems.add(pieceStorageService.deletePiecesByIds(pieceIds, centralTenantContext)
           .map(v -> onOrderItem)));
       }
     });
@@ -339,66 +380,88 @@ public class UnOpenCompositeOrderManager {
     });
   }
 
-  private List<JsonObject> getItemsByStatus(List<JsonObject> items, String status) {
-    return items.stream()
-      .filter(item -> status.equalsIgnoreCase(item.getJsonObject(ITEM_STATUS).getString(ITEM_STATUS_NAME)))
-      .collect(toList());
-  }
-
-  private Future<CompositePurchaseOrder> updateAndGetOrderWithLines(CompositePurchaseOrder compPO, RequestContext requestContext) {
-    if (CollectionUtils.isEmpty(compPO.getCompositePoLines())) {
-      return purchaseOrderLineService.getCompositePoLinesByOrderId(compPO.getId(), requestContext)
-        .map(poLines -> {
-          PoLineCommonUtil.sortPoLinesByPoLineNumber(poLines);
-          return compPO.withCompositePoLines(poLines);
-        })
-        .map(v -> compPO);
-    } else {
-      return Future.succeededFuture(compPO);
-    }
-  }
-
-  public Future<Void> deletePieceWithItem(String pieceId, RequestContext requestContext) {
+  private Future<Void> deletePieceWithItem(String pieceId, RequestContext requestContext, RequestContext itemContext) {
     PieceDeletionHolder holder = new PieceDeletionHolder().withDeleteHolding(true);
     return pieceStorageService.getPieceById(pieceId, requestContext)
-      .onSuccess(holder::setPieceToDelete)
-      .compose(aVoid -> purchaseOrderLineService.getOrderLineById(holder.getPieceToDelete().getPoLineId(), requestContext)
-        .compose(poLine -> purchaseOrderStorageService.getPurchaseOrderById(poLine.getPurchaseOrderId(), requestContext)
-          .map(purchaseOrder -> {
-            holder.withOrderInformation(purchaseOrder, poLine);
-            return null;
-          })))
-      .compose(purchaseOrder -> protectionService.isOperationRestricted(holder.getOriginPurchaseOrder().getAcqUnitIds(), DELETE, requestContext))
+      .map(piece -> {
+        holder.setPieceToDelete(piece);
+        return null;
+      })
+      .compose(aVoid -> purchaseOrderLineService.getOrderLineById(holder.getPieceToDelete().getPoLineId(), requestContext))
+      .compose(poLine -> purchaseOrderStorageService.getPurchaseOrderById(poLine.getPurchaseOrderId(), requestContext)
+        .map(purchaseOrder -> {
+          holder.withOrderInformation(purchaseOrder, poLine);
+          return null;
+        })
+      )
+      .compose(aVoid -> protectionService.isOperationRestricted(holder.getOriginPurchaseOrder().getAcqUnitIds(), DELETE, requestContext))
       .compose(vVoid -> canDeletePieceWithItem(holder.getPieceToDelete(), requestContext))
       .compose(aVoid -> pieceStorageService.deletePiece(pieceId, requestContext))
-      .compose(aVoid -> deletePieceConnectedItem(holder.getPieceToDelete(), requestContext));
+      .compose(aVoid -> deletePieceConnectedItem(holder.getPieceToDelete(), itemContext));
+  }
+
+  private List<JsonObject> filterItemsByStatus(List<JsonObject> items, String status) {
+    return items.stream()
+      .filter(item -> status.equalsIgnoreCase(item.getJsonObject(ITEM_STATUS).getString(ITEM_STATUS_NAME)))
+      .toList();
   }
 
   private Future<Void> deletePieceConnectedItem(Piece piece, RequestContext requestContext) {
-    if (StringUtils.isNotEmpty(piece.getItemId())) {
-      // Attempt to delete item
-      return inventoryManager.deleteItem(piece.getItemId(), true, requestContext)
-         .recover(t -> {
-          // Skip error processing if item has already deleted
-          if (t instanceof HttpException || ((HttpException) t).getCode() == 404) {
-          } else {
-            throw new CompletionException(t);
-          }
-          return null;
-        });
-    } else {
+    if (StringUtils.isEmpty(piece.getItemId())) {
       return Future.succeededFuture();
     }
+    return inventoryItemManager.deleteItem(piece.getItemId(), true, requestContext)
+      .recover(t -> {
+        if (t instanceof HttpException httpException && httpException.getCode() == 404) {
+          return null;
+        }
+        throw new CompletionException(t);
+      });
   }
 
   private Future<Void> canDeletePieceWithItem(Piece piece, RequestContext requestContext) {
-    return inventoryManager.getNumberOfRequestsByItemId(piece.getItemId(), requestContext)
+    return circulationRequestsRetriever.getNumberOfRequestsByItemId(piece.getItemId(), requestContext)
       .map(numOfRequests -> {
         if (numOfRequests != null && numOfRequests > 0) {
           throw new HttpException(422, ErrorCodes.REQUEST_FOUND.toError());
         }
         return null;
       });
+  }
+
+
+  private Future<List<Piece>> deleteExpectedPieces(CompositePoLine compPOL, RequestContext requestContext) {
+    if (PoLineCommonUtil.isReceiptNotRequired(compPOL.getReceiptStatus()) || Boolean.TRUE.equals(compPOL.getCheckinItems())) {
+      logger.info("Receipt is not required or independent receiving flow is used, skipping deleting pieces, poLineId: {}", compPOL.getId());
+      return Future.succeededFuture(List.of());
+    }
+    return pieceStorageService.getExpectedPiecesByLineId(compPOL.getId(), requestContext)
+      .compose(pieceCollection -> {
+        if (CollectionUtils.isEmpty(pieceCollection.getPieces())) {
+          return Future.succeededFuture(List.of());
+        }
+        return pieceStorageService.deletePiecesByIds(pieceCollection.getPieces().stream().map(Piece::getId).collect(toList()), requestContext)
+          .map(v -> pieceCollection.getPieces());
+      });
+  }
+
+  private void updateLocations(CompositePoLine compPOL, List<Pair<String, String>> deletedHoldingVsLocationIds) {
+    if (CollectionUtils.isEmpty(deletedHoldingVsLocationIds)) {
+      return;
+    }
+    Map<String, List<Location>> holdingIdVsLocations = compPOL.getLocations().stream().filter(entity -> Objects.nonNull(entity.getHoldingId()))
+      .collect(groupingBy(Location::getHoldingId));
+    deletedHoldingVsLocationIds.forEach(holdingIdVsLocationId -> {
+      String holdingId = holdingIdVsLocationId.getKey();
+      String locationId = holdingIdVsLocationId.getValue();
+      List<Location> locations = holdingIdVsLocations.get(holdingId);
+      if (CollectionUtils.isNotEmpty(locations)) {
+        locations.forEach(location -> {
+          location.setHoldingId(null);
+          location.setLocationId(locationId);
+        });
+      }
+    });
   }
 
 }
