@@ -16,42 +16,42 @@ import static org.folio.TestConstants.X_OKAPI_TOKEN;
 import static org.folio.TestConstants.X_OKAPI_USER_ID;
 import static org.folio.TestUtils.getMockAsJson;
 import static org.folio.TestUtils.getMockData;
+import static org.folio.orders.utils.HelperUtils.ORDER_CONFIG_MODULE_NAME;
 import static org.folio.orders.utils.HelperUtils.extractId;
 import static org.folio.orders.utils.HelperUtils.getFirstObjectFromResponse;
 import static org.folio.rest.RestConstants.NOT_FOUND;
 import static org.folio.rest.RestConstants.OKAPI_URL;
+import static org.folio.rest.core.exceptions.ErrorCodes.BARCODE_IS_NOT_UNIQUE;
 import static org.folio.rest.core.exceptions.ErrorCodes.HOLDINGS_BY_ID_NOT_FOUND;
+import static org.folio.rest.core.exceptions.ErrorCodes.ITEM_CREATION_FAILED;
 import static org.folio.rest.core.exceptions.ErrorCodes.PARTIALLY_RETURNED_COLLECTION;
 import static org.folio.rest.impl.MockServer.BASE_MOCK_DATA_PATH;
 import static org.folio.rest.impl.MockServer.HOLDINGS_OLD_NEW_PATH;
-import static org.folio.rest.impl.MockServer.ITEMS_RECORDS_MOCK_DATA_PATH;
-import static org.folio.rest.impl.MockServer.PIECE_RECORDS_MOCK_DATA_PATH;
 import static org.folio.rest.impl.PurchaseOrderLinesApiTest.COMP_PO_LINES_MOCK_DATA_PATH;
 import static org.folio.rest.impl.PurchaseOrdersApiTest.X_OKAPI_TENANT;
 import static org.folio.rest.jaxrs.model.Eresource.CreateInventory.INSTANCE_HOLDING;
-import static org.folio.service.inventory.InventoryManager.HOLDINGS_RECORDS;
-import static org.folio.service.inventory.InventoryManager.HOLDINGS_SOURCES;
-import static org.folio.service.inventory.InventoryManager.HOLDING_PERMANENT_LOCATION_ID;
-import static org.folio.service.inventory.InventoryManager.ID;
-import static org.folio.service.inventory.InventoryManager.ITEMS;
-import static org.folio.service.inventory.InventoryManager.ITEM_PURCHASE_ORDER_LINE_IDENTIFIER;
+import static org.folio.service.inventory.InventoryUtils.DEFAULT_LOAN_TYPE_NAME;
+import static org.folio.service.inventory.InventoryUtils.HOLDINGS_RECORDS;
+import static org.folio.service.inventory.InventoryHoldingManager.HOLDING_INSTANCE_ID;
+import static org.folio.service.inventory.InventoryHoldingManager.HOLDING_PERMANENT_LOCATION_ID;
+import static org.folio.service.inventory.InventoryItemManager.ID;
+import static org.folio.service.inventory.InventoryUtils.ITEMS;
+import static org.folio.service.inventory.InventoryUtils.LOAN_TYPES;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.CALLS_REAL_METHODS;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
 import java.io.IOException;
@@ -60,33 +60,37 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.CompletionException;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeoutException;
+import java.util.stream.Stream;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.folio.ApiTestSuite;
-import org.folio.TestConstants;
-import org.folio.models.PoLineUpdateHolder;
+import org.folio.Instance;
+import org.folio.models.consortium.ConsortiumConfiguration;
+import org.folio.orders.utils.HelperUtils;
 import org.folio.rest.core.RestClient;
-import org.folio.rest.core.exceptions.ErrorCodes;
 import org.folio.rest.core.exceptions.HttpException;
 import org.folio.rest.core.models.RequestContext;
 import org.folio.rest.core.models.RequestEntry;
 import org.folio.rest.jaxrs.model.CompositePoLine;
+import org.folio.rest.jaxrs.model.CompositePurchaseOrder;
 import org.folio.rest.jaxrs.model.Eresource;
 import org.folio.rest.jaxrs.model.Error;
 import org.folio.rest.jaxrs.model.Location;
-import org.folio.rest.jaxrs.model.Physical;
 import org.folio.rest.jaxrs.model.Piece;
-import org.folio.rest.jaxrs.model.PieceCollection;
 import org.folio.rest.jaxrs.model.Title;
+import org.folio.service.caches.ConfigurationEntriesCache;
+import org.folio.service.caches.InventoryCache;
 import org.folio.service.configuration.ConfigurationEntriesService;
-import org.folio.service.pieces.PieceService;
-import org.folio.service.pieces.PieceStorageService;
+import org.folio.service.consortium.ConsortiumConfigurationService;
+import org.folio.service.consortium.SharingInstanceService;
+import org.folio.service.orders.PurchaseOrderStorageService;
+import org.folio.utils.RequestContextMatcher;
 import org.hamcrest.core.IsInstanceOf;
+import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
@@ -107,7 +111,6 @@ import io.vertx.junit5.VertxTestContext;
 
 @ExtendWith(VertxExtension.class)
 public class InventoryManagerTest {
-  private static final Logger logger = LogManager.getLogger();
 
   private static final String ORDER_ID = "1ab7ef6a-d1d4-4a4f-90a2-882aed18af20";
   public static final String ORDER_PATH = BASE_MOCK_DATA_PATH + "compositeOrders/" + ORDER_ID + ".json";
@@ -121,17 +124,26 @@ public class InventoryManagerTest {
   private static final String INSTANCE_RECORDS_MOCK_DATA_PATH = BASE_MOCK_DATA_PATH + "instances/" + "instances.json";
   public static final String LINE_ID = "c0d08448-347b-418a-8c2f-5fb50248d67e";
   public static final String HOLDING_ID = "65cb2bf0-d4c2-4886-8ad0-b76f1ba75d61";
-  private static final JsonObject HOLDINGS_SOURCE_ID_RESPONSE = new JsonObject()
-    .put(HOLDINGS_SOURCES, "f32d531e-df79-46b3-8932-cdd35f7a2264");
+  public static final String ITEM_RECORD_PATH = BASE_MOCK_DATA_PATH + "itemsRecords/" + "itemRecord.json";
 
   @Autowired
-  InventoryManager inventoryManager;
+  InventoryItemManager inventoryItemManager;
+  @Autowired
+  InventoryHoldingManager inventoryHoldingManager;
+  @Autowired
+  InventoryInstanceManager inventoryInstanceManager;
   @Autowired
   private RestClient restClient;
   @Autowired
-  private PieceStorageService pieceStorageService;
+  private ConfigurationEntriesCache configurationEntriesCache;
   @Autowired
-  private ConfigurationEntriesService configurationEntriesService;
+  private InventoryCache inventoryCache;
+  @Autowired
+  private SharingInstanceService sharingInstanceService;
+  @Autowired
+  private ConsortiumConfigurationService consortiumConfigurationService;
+  @Autowired
+  private PurchaseOrderStorageService purchaseOrderStorageService;
 
 
   private Map<String, String> okapiHeadersMock;
@@ -174,7 +186,7 @@ public class InventoryManagerTest {
   @AfterEach
   void resetMocks() throws Exception {
     mockitoClosable.close();
-    Mockito.reset(restClient);
+    Mockito.reset(restClient, sharingInstanceService);
     clearServiceInteractions();
   }
 
@@ -183,12 +195,12 @@ public class InventoryManagerTest {
     JsonObject holdingsCollection = new JsonObject(getMockData(HOLDINGS_OLD_NEW_PATH));
     List<JsonObject> holdings = holdingsCollection.getJsonArray("holdingsRecords").stream()
        .map(o -> ((JsonObject) o))
-       .collect(toList());
+       .toList();
 
     List<String> holdingIds = holdings.stream().map(holding ->  holding.getString(ID)).collect(toList());
 
     doReturn(succeededFuture(holdingsCollection)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
-    var future = inventoryManager.getHoldingsByIds(holdingIds, requestContext);
+    var future = inventoryHoldingManager.getHoldingsByIds(holdingIds, requestContext);
     vertxTestContext.assertComplete(future)
       .onComplete(result -> {
         assertThat(result.result().size(), equalTo(holdings.size()));
@@ -203,13 +215,13 @@ public class InventoryManagerTest {
     JsonObject holdingsCollection = new JsonObject(getMockData(HOLDINGS_OLD_NEW_PATH));
     List<JsonObject> holdings = holdingsCollection.getJsonArray("holdingsRecords").stream()
       .map(o -> ((JsonObject) o))
-      .collect(toList());
+      .toList();
 
     List<String> holdingIds = holdings.stream().map(holding ->  holding.getString(ID)).collect(toList());
     holdingIds.add(UUID.randomUUID().toString());
     doReturn(succeededFuture(holdingsCollection)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
 
-    var future = inventoryManager.getHoldingsByIds(holdingIds, requestContext);
+    var future = inventoryHoldingManager.getHoldingsByIds(holdingIds, requestContext);
 
     vertxTestContext.assertFailure(future)
       .onComplete(executionException -> {
@@ -228,12 +240,12 @@ public class InventoryManagerTest {
     JsonObject holdingsCollection = new JsonObject(getMockData(HOLDINGS_OLD_NEW_PATH));
     List<JsonObject> holdings = holdingsCollection.getJsonArray("holdingsRecords").stream()
       .map(o -> ((JsonObject) o))
-      .collect(toList());
+      .toList();
 
     List<String> locationIds = holdings.stream().map(holding ->  holding.getString(HOLDING_PERMANENT_LOCATION_ID)).collect(toList());
 
     doReturn(succeededFuture(holdingsCollection)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
-    List<JsonObject> actHoldings = inventoryManager.getHoldingRecords(instanceId, locationIds, requestContext).result();
+    List<JsonObject> actHoldings = inventoryHoldingManager.getHoldingRecords(instanceId, locationIds, requestContext).result();
     assertThat(actHoldings.size(), equalTo(holdings.size()));
     verify(restClient, times(2)).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
   }
@@ -244,12 +256,12 @@ public class InventoryManagerTest {
     JsonObject holdingsCollection = new JsonObject(getMockData(HOLDINGS_OLD_NEW_PATH));
     List<JsonObject> holdings = holdingsCollection.getJsonArray("holdingsRecords").stream()
       .map(o -> ((JsonObject) o))
-      .collect(toList());
+      .toList();
 
-    List<String> locationIds = holdings.stream().map(holding ->  holding.getString(HOLDING_PERMANENT_LOCATION_ID)).collect(toList());
+    List<String> locationIds = holdings.stream().map(holding ->  holding.getString(HOLDING_PERMANENT_LOCATION_ID)).toList();
 
     doReturn(succeededFuture(holdingsCollection)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
-    inventoryManager.getFirstHoldingRecord(instanceId, locationIds.get(0), requestContext).result();
+    inventoryHoldingManager.getFirstHoldingRecord(instanceId, locationIds.get(0), requestContext).result();
     verify(restClient, times(1)).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
   }
 
@@ -261,7 +273,7 @@ public class InventoryManagerTest {
     JsonObject item2 = new JsonObject().put("id", UUID.randomUUID().toString());
     List<JsonObject> items = Arrays.asList(item1, item2);
     //When
-    inventoryManager.updateItemRecords(items, requestContext).result();
+    inventoryItemManager.updateItemRecords(items, requestContext).result();
     //Then
     verify(restClient, times(1)).put(any(RequestEntry.class), eq(item1), eq(requestContext));
     verify(restClient, times(1)).put(any(RequestEntry.class), eq(item2), eq(requestContext));
@@ -272,7 +284,7 @@ public class InventoryManagerTest {
     //given
     doReturn(succeededFuture(null)).when(restClient).put(any(RequestEntry.class), any(JsonObject.class), eq(requestContext));
     //When
-    inventoryManager.updateItemRecords(Collections.emptyList(), requestContext).result();
+    inventoryItemManager.updateItemRecords(Collections.emptyList(), requestContext).result();
     //Then
     verify(restClient, times(0)).put(any(RequestEntry.class),any(JsonObject.class), eq(requestContext));
   }
@@ -286,7 +298,7 @@ public class InventoryManagerTest {
 
     doReturn(succeededFuture(null)).when(restClient).delete(any(RequestEntry.class), eq(false), eq(requestContext));
     //When
-    inventoryManager.deleteItems(items, false, requestContext).result();
+    inventoryItemManager.deleteItems(items, false, requestContext).result();
     //Then
     verify(restClient, times(2)).delete(any(RequestEntry.class), eq(false), eq(requestContext));
   }
@@ -296,7 +308,7 @@ public class InventoryManagerTest {
     //given
     doReturn(succeededFuture(null)).when(restClient).delete(any(RequestEntry.class), eq(requestContext));
     //When
-    inventoryManager.deleteItems(Collections.emptyList(), false, requestContext).result();
+    inventoryItemManager.deleteItems(Collections.emptyList(), false, requestContext).result();
     //Then
     verify(restClient, times(0)).delete(any(RequestEntry.class), eq(requestContext));
   }
@@ -304,6 +316,7 @@ public class InventoryManagerTest {
 
   @Test
   void testShouldNotHandleItemRecordsIfCheckinItemsIsTrue() {
+    CompositePurchaseOrder order = getMockAsJson(ORDER_PATH).mapTo(CompositePurchaseOrder.class);
     CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
     String poLineId = "c0d08448-347b-418a-8c2f-5fb50248d67e";
     reqData.setId(poLineId);
@@ -315,85 +328,9 @@ public class InventoryManagerTest {
 
     //When
     Location location = new Location().withLocationId("758258bc-ecc1-41b8-abca-f7b610822fff");
-    List<Piece> pieces = inventoryManager.handleItemRecords(reqData, location, requestContext).result();
+    List<Piece> pieces = inventoryItemManager.handleItemRecords(order, reqData, location, requestContext).result();
 
     assertEquals(0, pieces.size());
-  }
-
-  @Test
-  void testShouldNotHandleItemRecordsIfCheckinItemsIsTrueInUpdatePoLIneTime() {
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
-    String poLineId = "c0d08448-347b-418a-8c2f-5fb50248d67e";
-    reqData.setId(poLineId);
-    reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
-    reqData.getEresource().setAccessProvider(ACTIVE_ACCESS_PROVIDER_B);
-    reqData.getEresource().setCreateInventory(INSTANCE_HOLDING);
-    reqData.getLocations().get(0).setLocationId("758258bc-ecc1-41b8-abca-f7b610822fff");
-    reqData.setCheckinItems(true);
-
-    CompositePoLine storagePoLineCom = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c0d08448-347b-418a-8c2f-5fb50248d67e").mapTo(CompositePoLine.class);
-    storagePoLineCom.setAlerts(null);
-    storagePoLineCom.setReportingCodes(null);
-    storagePoLineCom.getLocations().get(0).setQuantityPhysical(1);
-    storagePoLineCom.getLocations().get(0).setQuantity(1);
-    storagePoLineCom.getCost().setQuantityPhysical(1);
-    //When
-    PoLineUpdateHolder poLineUpdateHolder = new PoLineUpdateHolder().withNewLocationId(NEW_LOCATION_ID);
-    List<Piece> pieces = inventoryManager.handleItemRecords(reqData, poLineUpdateHolder, requestContext).result();
-
-    assertEquals(0, pieces.size());
-  }
-
-  @Test
-  void testShouldHandleItemRecordsIfPhysycPresentInUpdatePoLineTime() throws IOException {
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c0d08448-347b-418a-8c2f-5fb50248d67e").mapTo(CompositePoLine.class);
-    String poLineId = "c0d08448-347b-418a-8c2f-5fb50248d67d";
-    String itemId = "86481a22-633e-4b97-8061-0dc5fdaaeabb";
-    String materialType = "1a54b431-2e4f-452d-9cae-9cee66c9a892";
-    String locationId = "758258bc-ecc1-41b8-abca-f7b610822fff";
-    String oldLocationId = "fcd64ce1-6995-48f0-840e-89ffa2288371";
-
-    reqData.setId(poLineId);
-    reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
-    reqData.getPhysical().setMaterialType(materialType);
-    reqData.getPhysical().setMaterialSupplier(ACTIVE_ACCESS_PROVIDER_B);
-    reqData.getPhysical().setCreateInventory(Physical.CreateInventory.INSTANCE_HOLDING_ITEM);
-    reqData.getLocations().get(0).setQuantityPhysical(1);
-    reqData.getLocations().get(0).setQuantity(1);
-    reqData.getCost().setQuantityPhysical(1);
-    reqData.getLocations().get(0).setLocationId(locationId);
-
-    CompositePoLine storagePoLineCom = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c0d08448-347b-418a-8c2f-5fb50248d67e").mapTo(CompositePoLine.class);
-    storagePoLineCom.setAlerts(null);
-    storagePoLineCom.setReportingCodes(null);
-    storagePoLineCom.getLocations().get(0).setQuantityPhysical(1);
-    storagePoLineCom.getLocations().get(0).setQuantity(1);
-    storagePoLineCom.getCost().setQuantityPhysical(1);
-
-    JsonObject items = new JsonObject(getMockData(ITEMS_RECORDS_MOCK_DATA_PATH + "inventoryItemsCollection.json"));
-    List<JsonObject> needUpdateItems = items.getJsonArray(ITEMS).stream()
-      .map(o -> ((JsonObject) o))
-      .filter(item -> item.getString(TestConstants.ID).equals(itemId))
-      .map(item -> item.put(ITEM_PURCHASE_ORDER_LINE_IDENTIFIER, poLineId))
-      .collect(toList());
-
-    String path = PIECE_RECORDS_MOCK_DATA_PATH + String.format("pieceRecords-%s.json", poLineId);
-    PieceCollection existedPieces = new JsonObject(getMockData(path)).mapTo(PieceCollection.class);
-    existedPieces.getPieces().get(0).setItemId(itemId);
-    existedPieces.getPieces().get(0).setFormat(Piece.Format.PHYSICAL);
-    existedPieces.getPieces().get(0).setPoLineId(poLineId);
-    //given
-    doReturn(succeededFuture(existedPieces)).when(pieceStorageService).getExpectedPiecesByLineId(poLineId, requestContext);
-    doReturn(succeededFuture(needUpdateItems)).when(inventoryManager).getItemRecordsByIds(Collections.singletonList(itemId), requestContext);
-    doReturn(succeededFuture(null)).when(inventoryManager).updateItemRecords(any(), eq(requestContext));
-    doReturn(succeededFuture(null)).when(restClient).put(any(RequestEntry.class), any(JsonObject.class), eq(requestContext));
-    //When
-    PoLineUpdateHolder poLineUpdateHolder = new PoLineUpdateHolder().withOldLocationId(oldLocationId).withNewLocationId(locationId);
-    List<Piece> pieces = inventoryManager.handleItemRecords(reqData, poLineUpdateHolder, requestContext).result();
-
-    assertEquals(1, pieces.size());
-    assertEquals(itemId, pieces.get(0).getItemId());
-    assertEquals(locationId, pieces.get(0).getLocationId());
   }
 
   @Test
@@ -407,7 +344,7 @@ public class InventoryManagerTest {
     JsonObject statuseJSON = new JsonObject("{\"instanceTypes\":\"30fffe0e-e985-4144-b2e2-1e8179bdb41f\"" +
       ",\"instanceStatuses\":\"daf2681c-25af-4202-a3fa-e58fdf806183\"}");
     //When
-    inventoryManager.buildInstanceRecordJsonObject(title, statuseJSON);
+    inventoryInstanceManager.buildInstanceRecordJsonObject(title, statuseJSON);
     //Then
     verify(title).getContributors();
     verify(title, times(1)).getPublishedDate();
@@ -428,7 +365,7 @@ public class InventoryManagerTest {
     JsonObject statuseJSON = new JsonObject("{\"instanceTypes\":\"30fffe0e-e985-4144-b2e2-1e8179bdb41f\"" +
       ",\"instanceStatuses\":\"daf2681c-25af-4202-a3fa-e58fdf806183\"}");
     //When
-    inventoryManager.buildInstanceRecordJsonObject(title, statuseJSON);
+    inventoryInstanceManager.buildInstanceRecordJsonObject(title, statuseJSON);
     //Then
     verify(title).getContributors();
     verify(title, times(2)).getPublishedDate();
@@ -449,7 +386,7 @@ public class InventoryManagerTest {
     JsonObject statuseJSON = new JsonObject("{\"instanceTypes\":\"30fffe0e-e985-4144-b2e2-1e8179bdb41f\"" +
       ",\"instanceStatuses\":\"daf2681c-25af-4202-a3fa-e58fdf806183\"}");
     //When
-    inventoryManager.buildInstanceRecordJsonObject(title, statuseJSON);
+    inventoryInstanceManager.buildInstanceRecordJsonObject(title, statuseJSON);
     //Then
     verify(title).getContributors();
     verify(title, times(1)).getPublishedDate();
@@ -470,7 +407,7 @@ public class InventoryManagerTest {
     JsonObject statuseJSON = new JsonObject("{\"instanceTypes\":\"30fffe0e-e985-4144-b2e2-1e8179bdb41f\"" +
       ",\"instanceStatuses\":\"daf2681c-25af-4202-a3fa-e58fdf806183\"}");
     //When
-    inventoryManager.buildInstanceRecordJsonObject(title, statuseJSON);
+    inventoryInstanceManager.buildInstanceRecordJsonObject(title, statuseJSON);
     //Then
     verify(title).getContributors();
     verify(title, times(1)).getPublishedDate();
@@ -480,80 +417,20 @@ public class InventoryManagerTest {
 
   @Test
   void shouldCheckIfTheHoldingExistsWhenHoldingIdSpecifiedAndIfExistThenReturnHoldingIdFromLocation() throws IOException {
-    String instanceId = UUID.randomUUID().toString();
     JsonObject holdingsCollection = new JsonObject(getMockData(HOLDINGS_OLD_NEW_PATH));
     JsonObject holdingExp = getFirstObjectFromResponse(holdingsCollection, HOLDINGS_RECORDS);
     String holdingIdExp = extractId(holdingExp);
-    Location location = new Location().withHoldingId(holdingIdExp).withQuantity(1).withQuantityPhysical(1);
 
     doReturn(succeededFuture(holdingExp)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
-    String holdingIdAct = inventoryManager.getOrCreateHoldingsRecord(instanceId, location, requestContext).result();
+    String holdingIdAct = inventoryHoldingManager.getFromCacheOrCreateHolding(holdingIdExp, requestContext).result();
 
     assertThat(holdingIdAct, equalTo(holdingIdExp));
     verify(restClient, times(1)).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
   }
 
   @Test
-  void shouldCheckIfTheHoldingExistsWhenLocationIdAlwaysNewHoldingShouldBeCreated(VertxTestContext vertxTestContext) throws IOException {
-    String instanceId = UUID.randomUUID().toString();
-    JsonObject holdingsCollection = new JsonObject(getMockData(HOLDINGS_OLD_NEW_PATH));
-    String holdingIdExp = extractId(getFirstObjectFromResponse(holdingsCollection, HOLDINGS_RECORDS));
-    List<JsonObject> holdings = holdingsCollection.getJsonArray(HOLDINGS_RECORDS).stream()
-      .map(o -> ((JsonObject) o))
-      .collect(toList());
-
-    List<String> locationIds = holdings.stream().map(holding ->  holding.getString(HOLDING_PERMANENT_LOCATION_ID)).collect(toList());
-    Location location = new Location().withLocationId(locationIds.get(0)).withQuantity(1).withQuantityPhysical(1);
-
-    doReturn(succeededFuture(new JsonObject().put(ID, holdingIdExp))).when(restClient).postJsonObject(any(RequestEntry.class), any(), any(RequestContext.class));
-    doReturn(succeededFuture(HOLDINGS_SOURCE_ID_RESPONSE)).when(inventoryManager).getEntryId(eq(HOLDINGS_SOURCES), any(ErrorCodes.class), eq(requestContext));
-
-    var future = inventoryManager.getOrCreateHoldingsRecord(instanceId, location, requestContext);
-
-    vertxTestContext.assertComplete(future)
-      .onComplete(res -> {
-        assertThat(res.result(), equalTo(holdingIdExp));
-        verify(restClient, times(1)).postJsonObject(any(RequestEntry.class), any(JsonObject.class), eq(requestContext));
-        vertxTestContext.completeNow();
-      });
-
-  }
-
-  @Test
-  void shouldCheckIfTheHoldingExistsWhenLocationIdSpecifiedAndIfNotExistThenCreateNewHoldingReturnHoldingId(VertxTestContext vertxTestContext) throws IOException {
-    String instanceId = UUID.randomUUID().toString();
-    JsonObject holdingsCollection = new JsonObject(getMockData(HOLDINGS_OLD_NEW_PATH));
-    String holdingIdExp = extractId(getFirstObjectFromResponse(holdingsCollection, HOLDINGS_RECORDS));
-    List<JsonObject> holdings = holdingsCollection.getJsonArray(HOLDINGS_RECORDS).stream()
-      .map(o -> ((JsonObject) o))
-      .collect(toList());
-
-    List<String> locationIds = holdings.stream().map(holding ->  holding.getString(HOLDING_PERMANENT_LOCATION_ID)).collect(toList());
-    Location location = new Location().withLocationId(locationIds.get(0)).withQuantity(1).withQuantityPhysical(1);
-
-    JsonObject holdingsRecJson = new JsonObject();
-    holdingsRecJson.put(InventoryManager.HOLDING_INSTANCE_ID, instanceId);
-    holdingsRecJson.put(InventoryManager.HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
-    JsonObject emptyHoldingCollection = new JsonObject().put(HOLDINGS_RECORDS, new JsonArray());
-
-    doReturn(succeededFuture(emptyHoldingCollection)).when(restClient).getAsJsonObject(any(RequestEntry.class), any(RequestContext.class));
-    doReturn(succeededFuture(new JsonObject().put(ID, holdingIdExp))).when(restClient).postJsonObject(any(RequestEntry.class), any(JsonObject.class), any(RequestContext.class));
-    doReturn(succeededFuture(HOLDINGS_SOURCE_ID_RESPONSE)).when(inventoryManager).getEntryId(eq(HOLDINGS_SOURCES), any(ErrorCodes.class), any(RequestContext.class));
-
-    var future = inventoryManager.getOrCreateHoldingsRecord(instanceId, location, requestContext);
-    vertxTestContext.assertComplete(future)
-      .onComplete(res -> {
-        assertThat(res.result(), equalTo(holdingIdExp));
-        verify(restClient, times(1)).postJsonObject(any(RequestEntry.class), any(JsonObject.class), any(RequestContext.class));
-        vertxTestContext.completeNow();
-      });
-  }
-
-  @Test
   void shouldThrowExceptionIfHoldingIsNotAlreadyExist() {
-    String instanceId = UUID.randomUUID().toString();
     String holdingId = UUID.randomUUID().toString();
-    Location location = new Location().withHoldingId(holdingId).withQuantity(1).withQuantityPhysical(1);
     String msg = String.format(HOLDINGS_BY_ID_NOT_FOUND.getDescription(), holdingId);
     Error error = new Error().withCode(HOLDINGS_BY_ID_NOT_FOUND.getCode()).withMessage(msg);
 
@@ -561,7 +438,7 @@ public class InventoryManagerTest {
       .thenThrow(new CompletionException(new HttpException(NOT_FOUND, error)));
 
     CompletionException exception = assertThrows(CompletionException.class,
-      () -> inventoryManager.getOrCreateHoldingsRecord(instanceId, location, requestContext).result());
+      () -> inventoryHoldingManager.getFromCacheOrCreateHolding(holdingId, requestContext).result());
 
     assertThat(exception.getCause(), IsInstanceOf.instanceOf(HttpException.class));
     HttpException cause = (HttpException) exception.getCause();
@@ -575,7 +452,7 @@ public class InventoryManagerTest {
     JsonObject holding = new JsonObject();
     holding.put(ID, holdingId);
     doReturn(succeededFuture(holding)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(true), eq(requestContext));
-    JsonObject holdingIdAct = inventoryManager.getHoldingById(holdingId, true, requestContext).result();
+    JsonObject holdingIdAct = inventoryHoldingManager.getHoldingById(holdingId, true, requestContext).result();
 
     assertThat(holding, equalTo(holdingIdAct));
     verify(restClient, times(1)).getAsJsonObject(any(RequestEntry.class), eq(true), eq(requestContext));
@@ -593,15 +470,15 @@ public class InventoryManagerTest {
 
     JsonObject holdingsRecJson = new JsonObject();
     holdingsRecJson.put(ID, holdingId);
-    holdingsRecJson.put(InventoryManager.ITEM_HOLDINGS_RECORD_ID, holdingsRecordId);
-    holdingsRecJson.put(InventoryManager.ITEM_PURCHASE_ORDER_LINE_IDENTIFIER, poLineId);
+    holdingsRecJson.put(InventoryItemManager.ITEM_HOLDINGS_RECORD_ID, holdingsRecordId);
+    holdingsRecJson.put(InventoryItemManager.ITEM_PURCHASE_ORDER_LINE_IDENTIFIER, poLineId);
 
     JsonObject holdingsRecJsonColl = new JsonObject();
     holdingsRecJsonColl.put(HOLDINGS_RECORDS, new JsonArray().add(holdingsRecJson));
     holdingsRecJsonColl.put(ITEMS, new JsonArray().add(item));
 
     doReturn(succeededFuture(holdingsRecJsonColl)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
-    List<JsonObject> items = inventoryManager.getItemsByHoldingIdAndOrderLineId(holdingsRecordId, poLineId, requestContext).result();
+    List<JsonObject> items = inventoryItemManager.getItemsByHoldingIdAndOrderLineId(holdingsRecordId, poLineId, requestContext).result();
 
     assertThat(1, equalTo(items.size()));
     verify(restClient, times(1)).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
@@ -613,7 +490,7 @@ public class InventoryManagerTest {
     JsonObject holding = new JsonObject();
     holding.put(ID, holdingId);
     doReturn(succeededFuture(holding)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(false), eq(requestContext));
-    JsonObject holdingIdAct = inventoryManager.getHoldingById(holdingId, requestContext).result();
+    JsonObject holdingIdAct = inventoryHoldingManager.getHoldingById(holdingId, false, requestContext).result();
 
     assertThat(holding, equalTo(holdingIdAct));
     verify(restClient, times(1)).getAsJsonObject(any(RequestEntry.class), eq(false), eq(requestContext));
@@ -622,69 +499,21 @@ public class InventoryManagerTest {
   @Test
   void shouldRetrieveEmptyJsonObjectItemIfHoldingIdIsNotProvidedAndHoldingFound() {
     JsonObject holding = new JsonObject();
-    JsonObject holdingIdAct = inventoryManager.getHoldingById(null, true, requestContext).result();
+    JsonObject holdingIdAct = inventoryHoldingManager.getHoldingById(null, true, requestContext).result();
 
     assertThat(holding, equalTo(holdingIdAct));
     verify(restClient, times(0)).getAsJsonObject(any(RequestEntry.class), eq(true), eq(requestContext));
   }
 
   @Test
-  void testShouldSkipCreationNewInstanceIfInstanceIdIsProvided()  {
-    //given
-    Title title = getMockAsJson(TILES_PATH,"title").mapTo(Title.class);
-    //When
-    Future<Title> result = inventoryManager.openOrderHandlePackageLineInstance(title, false, requestContext);
-    //Then
-    Title actTitle = result.result();
-    assertEquals(title, actTitle);
-  }
-
-  @Test
   void testShouldCreateInstanceRecordIfInstanceMatchingIsDisabled()  {
     //given
     Title title = getMockAsJson(TILES_PATH,"title").mapTo(Title.class);
-    doReturn(succeededFuture(UUID.randomUUID().toString())).when(inventoryManager).createInstanceRecord(any(Title.class), eq(requestContext));
+    doReturn(succeededFuture(UUID.randomUUID().toString())).when(inventoryInstanceManager).createInstanceRecord(any(Title.class), eq(requestContext));
     //When
-    inventoryManager.getOrCreateInstanceRecord(title, true, requestContext).result();
+    inventoryInstanceManager.getOrCreateInstanceRecord(title, true, requestContext).result();
     //Then
-    verify(inventoryManager, times(1)).createInstanceRecord(any(Title.class), eq(requestContext));
-  }
-
-  @Test
-  void testShouldCreateInstanceIfInstanceIdIsNotProvided()  {
-    //given
-    Title title = getMockAsJson(TILES_PATH,"title").mapTo(Title.class);
-    title.setInstanceId(null);
-    mock(PieceService.class, CALLS_REAL_METHODS);
-    doReturn(succeededFuture(UUID.randomUUID().toString())).when(inventoryManager).getOrCreateInstanceRecord(any(Title.class), any(Boolean.class), eq(requestContext));
-    //When
-    inventoryManager.openOrderHandlePackageLineInstance(title, false, requestContext).result();
-    //Then
-    verify(inventoryManager, times(1)).getOrCreateInstanceRecord(title, false, requestContext);
-  }
-
-  @Test
-  void testShouldCreateInstanceRecordIfProductIsEmpty()  {
-    //given
-    Title title = getMockAsJson(TILES_PATH,"title").mapTo(Title.class);
-    title.setProductIds(null);
-    doReturn(succeededFuture(UUID.randomUUID().toString())).when(inventoryManager).createInstanceRecord(any(Title.class), eq(requestContext));
-    //When
-    inventoryManager.getOrCreateInstanceRecord(title, requestContext).result();
-    //Then
-    verify(inventoryManager, times(1)).createInstanceRecord(any(Title.class), eq(requestContext));
-  }
-
-  @Test
-  void testShouldCreateInstanceRecordIfProductPresentAndInstancesNotFoundInDB()  {
-    //given
-    Title title = getMockAsJson(TILES_PATH,"title").mapTo(Title.class);
-    doReturn(succeededFuture(new JsonObject("{\"instances\" : []}"))).when(inventoryManager).searchInstancesByProducts(any(), eq(requestContext));
-    doReturn(succeededFuture(UUID.randomUUID().toString())).when(inventoryManager).createInstanceRecord(any(Title.class), eq(requestContext));
-    //When
-    inventoryManager.getOrCreateInstanceRecord(title, requestContext).result();
-    //Then
-    verify(inventoryManager, times(1)).createInstanceRecord(any(Title.class), eq(requestContext));
+    verify(inventoryInstanceManager, times(1)).createInstanceRecord(any(Title.class), eq(requestContext));
   }
 
   @Test
@@ -692,19 +521,19 @@ public class InventoryManagerTest {
     //given
     Title title = getMockAsJson(TILES_PATH,"title").mapTo(Title.class);
     JsonObject instances = new JsonObject(getMockData(INSTANCE_RECORDS_MOCK_DATA_PATH));
-    doReturn(succeededFuture(instances)).when(inventoryManager).searchInstancesByProducts(any(), eq(requestContext));
-    doReturn(succeededFuture(UUID.randomUUID().toString())).when(inventoryManager).createInstanceRecord(any(Title.class), eq(requestContext));
+    doReturn(succeededFuture(instances)).when(inventoryInstanceManager).searchInstancesByProducts(any(), eq(requestContext));
+    doReturn(succeededFuture(UUID.randomUUID().toString())).when(inventoryInstanceManager).createInstanceRecord(any(Title.class), eq(requestContext));
     //When
-    inventoryManager.getOrCreateInstanceRecord(title, false, requestContext).result();
+    inventoryInstanceManager.getOrCreateInstanceRecord(title, false, requestContext).result();
     //Then
-    verify(inventoryManager, times(0)).createInstanceRecord(any(Title.class), eq(requestContext));
-    verify(inventoryManager, times(1)).searchInstancesByProducts(any(), eq(requestContext));
+    verify(inventoryInstanceManager, times(0)).createInstanceRecord(any(Title.class), eq(requestContext));
+    verify(inventoryInstanceManager, times(1)).searchInstancesByProducts(any(), eq(requestContext));
   }
 
 
   @Test
   void testShouldCreateItemRecordForEresources()  {
-    //given
+    CompositePurchaseOrder order = getMockAsJson(ORDER_PATH).mapTo(CompositePurchaseOrder.class);
     CompositePoLine line = getMockAsJson(COMPOSITE_LINES_PATH, LINE_ID).mapTo(CompositePoLine.class);
     Eresource eresource = new Eresource().withMaterialType(line.getPhysical().getMaterialType())
       .withCreateInventory(Eresource.CreateInventory.INSTANCE_HOLDING_ITEM);
@@ -712,87 +541,118 @@ public class InventoryManagerTest {
     line.setEresource(eresource);
     line.setOrderFormat(CompositePoLine.OrderFormat.ELECTRONIC_RESOURCE);
     String expItemId = UUID.randomUUID().toString();
+
     doReturn(succeededFuture(Collections.singletonList(expItemId)))
-      .when(inventoryManager).createMissingElectronicItems(any(CompositePoLine.class), any(Piece.class), eq(1), eq(requestContext));
-    //When
-    Future<String> result = inventoryManager.openOrderCreateItemRecord(line, HOLDING_ID, requestContext);
+      .when(inventoryItemManager).createMissingElectronicItems(any(CompositePurchaseOrder.class), any(CompositePoLine.class),
+        any(Piece.class), eq(1), eq(requestContext));
+
+    Future<String> result = inventoryItemManager.openOrderCreateItemRecord(order, line, HOLDING_ID, requestContext);
     String actItemId = result.result();
-    //Then
-    verify(inventoryManager).createMissingElectronicItems(any(CompositePoLine.class), any(Piece.class), eq(1), eq(requestContext));
+
+    verify(inventoryItemManager).createMissingElectronicItems(any(CompositePurchaseOrder.class), any(CompositePoLine.class), any(Piece.class), eq(1), eq(requestContext));
     assertEquals(expItemId, actItemId);
+  }
+
+  @Test
+  void testShouldProvideCorrectErrorCodeWhenItemCreatingFailed() {
+    CompositePurchaseOrder order = getMockAsJson(ORDER_PATH).mapTo(CompositePurchaseOrder.class);
+    order.setWorkflowStatus(CompositePurchaseOrder.WorkflowStatus.CLOSED);
+    CompositePoLine line = getMockAsJson(COMPOSITE_LINES_PATH, LINE_ID).mapTo(CompositePoLine.class);
+    line.setPurchaseOrderId(order.getId());
+    Piece piece = getMockAsJson(PIECE_PATH,"pieceRecord").mapTo(Piece.class);
+
+    doReturn(Future.failedFuture(new HttpException(500, "Something went wrong!")))
+      .when(restClient).postJsonObjectAndGetId(any(RequestEntry.class), any(JsonObject.class), any(RequestContext.class));
+    doReturn(Future.succeededFuture(new JsonObject())).when(configurationEntriesCache).loadConfiguration(ORDER_CONFIG_MODULE_NAME, requestContext);
+    doReturn(Future.succeededFuture(new JsonObject())).when(inventoryCache).getEntryId(LOAN_TYPES, DEFAULT_LOAN_TYPE_NAME, requestContext);
+
+    Future<List<String>> result = inventoryItemManager.createMissingPhysicalItems(order, line, piece, 1, requestContext);
+    HttpException cause = (HttpException) result.cause();
+
+    assertEquals(ITEM_CREATION_FAILED.getCode(), cause.getError().getCode());
+    assertEquals("Something went wrong!", cause.getError().getParameters().get(0).getValue());
+  }
+
+  @Test
+  void testShouldProvideCorrectBarcodeNotUniqueErrorCode() {
+    CompositePurchaseOrder order = getMockAsJson(ORDER_PATH).mapTo(CompositePurchaseOrder.class);
+    order.setWorkflowStatus(CompositePurchaseOrder.WorkflowStatus.CLOSED);
+    CompositePoLine line = getMockAsJson(COMPOSITE_LINES_PATH, LINE_ID).mapTo(CompositePoLine.class);
+    line.setPurchaseOrderId(order.getId());
+    Piece piece = getMockAsJson(PIECE_PATH,"pieceRecord").mapTo(Piece.class);
+
+    doReturn(Future.failedFuture(new HttpException(500, InventoryItemManager.BARCODE_ALREADY_EXIST_ERROR)))
+      .when(restClient).postJsonObjectAndGetId(any(RequestEntry.class), any(JsonObject.class), any(RequestContext.class));
+    doReturn(Future.succeededFuture(new JsonObject())).when(configurationEntriesCache).loadConfiguration(ORDER_CONFIG_MODULE_NAME, requestContext);
+    doReturn(Future.succeededFuture(new JsonObject())).when(inventoryCache).getEntryId(LOAN_TYPES, DEFAULT_LOAN_TYPE_NAME, requestContext);
+
+    //When
+    Future<List<String>> result = inventoryItemManager.createMissingPhysicalItems(order, line, piece, 1, requestContext);
+    HttpException cause = (HttpException) result.cause();
+
+    //Then
+    assertEquals(BARCODE_IS_NOT_UNIQUE.getCode(), cause.getError().getCode());
+  }
+
+  @Test
+  void testShouldCreateItemWithClosedStatusWhenOrderClosed() {
+    CompositePurchaseOrder order = getMockAsJson(ORDER_PATH).mapTo(CompositePurchaseOrder.class);
+    order.setWorkflowStatus(CompositePurchaseOrder.WorkflowStatus.CLOSED);
+    CompositePoLine line = getMockAsJson(COMPOSITE_LINES_PATH, LINE_ID).mapTo(CompositePoLine.class);
+    line.setPurchaseOrderId(order.getId());
+    Piece piece = getMockAsJson(PIECE_PATH,"pieceRecord").mapTo(Piece.class);
+    JsonObject itemRecord = getMockAsJson(ITEM_RECORD_PATH);
+    String expItemId = itemRecord.getString("id");
+
+    doReturn(Future.succeededFuture(expItemId))
+      .when(restClient).postJsonObjectAndGetId(any(RequestEntry.class), eq(itemRecord), any(RequestContext.class));
+    doReturn(Future.succeededFuture(new JsonObject())).when(configurationEntriesCache).loadConfiguration(ORDER_CONFIG_MODULE_NAME, requestContext);
+    doReturn(Future.succeededFuture(new JsonObject())).when(inventoryCache).getEntryId(LOAN_TYPES, DEFAULT_LOAN_TYPE_NAME, requestContext);
+
+    Future<List<String>> result = inventoryItemManager.createMissingPhysicalItems(order, line, piece, 1, requestContext);
+    assertEquals(expItemId, result.result().get(0));
+  }
+
+  @Test
+  void testShouldCreateItemWithOnOrderStatusWhenOrderNotFoundInMemberTenant() {
+    CompositePurchaseOrder order = getMockAsJson(ORDER_PATH).mapTo(CompositePurchaseOrder.class);
+    order.setWorkflowStatus(CompositePurchaseOrder.WorkflowStatus.CLOSED);
+    CompositePoLine line = getMockAsJson(COMPOSITE_LINES_PATH, LINE_ID).mapTo(CompositePoLine.class);
+    line.setPurchaseOrderId(order.getId());
+    Piece piece = getMockAsJson(PIECE_PATH,"pieceRecord").mapTo(Piece.class);
+    JsonObject itemRecord = getMockAsJson(ITEM_RECORD_PATH);
+    String expItemId = itemRecord.getString("id");
+
+    doReturn(Future.succeededFuture(expItemId))
+      .when(restClient).postJsonObjectAndGetId(any(RequestEntry.class), eq(itemRecord), any(RequestContext.class));
+    doReturn(Future.succeededFuture(new JsonObject())).when(configurationEntriesCache).loadConfiguration(ORDER_CONFIG_MODULE_NAME, requestContext);
+    doReturn(Future.succeededFuture(new JsonObject())).when(inventoryCache).getEntryId(LOAN_TYPES, DEFAULT_LOAN_TYPE_NAME, requestContext);
+
+    Future<List<String>> result = inventoryItemManager.createMissingPhysicalItems(order, line, piece, 1, requestContext);
+    assertEquals(expItemId, result.result().get(0));
   }
 
   @Test
   void testShouldCreateItemRecordForPhysical()  {
     //given
+    CompositePurchaseOrder order = getMockAsJson(ORDER_PATH).mapTo(CompositePurchaseOrder.class);
     CompositePoLine line = getMockAsJson(COMPOSITE_LINES_PATH, LINE_ID).mapTo(CompositePoLine.class);
     String expItemId = UUID.randomUUID().toString();
 
     doReturn(succeededFuture(Collections.singletonList(expItemId)))
-      .when(inventoryManager).createMissingPhysicalItems(any(CompositePoLine.class), any(Piece.class), eq(1), eq(requestContext));
-    //When
-    Future<String> result = inventoryManager.openOrderCreateItemRecord(line, HOLDING_ID, requestContext);
+      .when(inventoryItemManager).createMissingPhysicalItems(any(CompositePurchaseOrder.class), any(CompositePoLine.class), any(Piece.class), eq(1), eq(requestContext));
+
+    Future<String> result = inventoryItemManager.openOrderCreateItemRecord(order, line, HOLDING_ID, requestContext);
     String actItemId = result.result();
-    //Then
-    verify(inventoryManager).createMissingPhysicalItems(any(CompositePoLine.class), any(Piece.class), eq(1), eq(requestContext));
+
+    verify(inventoryItemManager).createMissingPhysicalItems(any(CompositePurchaseOrder.class), any(CompositePoLine.class), any(Piece.class), eq(1), eq(requestContext));
     assertEquals(expItemId, actItemId);
   }
 
   @Test
-  void testHoldingsItemCreationShouldBeSkippedIfEresourceOrPhysicsIsAbsent()  {
-    //given
-    CompositePoLine line = getMockAsJson(COMPOSITE_LINES_PATH, LINE_ID).mapTo(CompositePoLine.class);
-    line.setEresource(null);
-    line.setPhysical(null);
-
-    Piece piece = getMockAsJson(PIECE_PATH,"pieceRecord").mapTo(Piece.class);
-    Title title = getMockAsJson(TILES_PATH,"title").mapTo(Title.class);
-
-    doReturn(succeededFuture(HOLDING_ID)).when(inventoryManager).getOrCreateHoldingsRecord(anyString(), any(Location.class), eq(requestContext));
-    //When
-    Location location = new Location().withLocationId(piece.getLocationId());
-    Future<String> result = inventoryManager.handleHoldingsRecord(line, location, title.getInstanceId(), requestContext);
-
-    //Then
-    String holdingId = result.result();
-    verify(inventoryManager,never()).getOrCreateHoldingsRecord(title.getInstanceId(), location, requestContext);
-    assertNull(holdingId);
-  }
-
-  @Test
-  void testHoldingsItemShouldNotBeCreatedIfPOLIsNull() {
-    //given
-    Piece piece = getMockAsJson(PIECE_PATH,"pieceRecord").mapTo(Piece.class);
-    Title title = getMockAsJson(TILES_PATH,"title").mapTo(Title.class);
-    //When
-    Location location = new Location().withLocationId(piece.getLocationId());
-    Future<String> result = inventoryManager.handleHoldingsRecord(null, location, title.getInstanceId(), requestContext);
-    //Then
-    assertTrue(result.failed());
-  }
-
-  @Test
-  void testHoldingsRecordShouldBeCreated()  {
-    //given
-    CompositePoLine line = getMockAsJson(COMPOSITE_LINES_PATH, LINE_ID).mapTo(CompositePoLine.class);
-    Piece piece = getMockAsJson(PIECE_PATH,"pieceRecord").mapTo(Piece.class);
-    Title title = getMockAsJson(TILES_PATH,"title").mapTo(Title.class);
-
-    doReturn(succeededFuture(HOLDING_ID)).when(inventoryManager).getOrCreateHoldingsRecord(anyString(), any(Location.class), eq(requestContext));
-    //When
-    Location location = new Location().withLocationId(piece.getLocationId());
-    Future<String> result = inventoryManager.handleHoldingsRecord(line, location, title.getInstanceId(), requestContext);
-    String actHoldingId = result.result();
-    //Then
-    verify(inventoryManager).getOrCreateHoldingsRecord(eq(title.getInstanceId()), eq(location), eq(requestContext));
-    assertEquals(HOLDING_ID, actHoldingId);
-  }
-
-  @Test
   void testUpdateInventoryNegativeCaseIfPOLIsNull() {
-    //When
-    Future<String> result =  inventoryManager.openOrderCreateItemRecord(null, UUID.randomUUID().toString(), requestContext);
-    //Then
+    Future<String> result =  inventoryItemManager.openOrderCreateItemRecord(null, null, UUID.randomUUID().toString(), requestContext);
+
     assertTrue(result.failed());
   }
 
@@ -805,19 +665,19 @@ public class InventoryManagerTest {
     String holdingIdExp = extractId(getFirstObjectFromResponse(holdingsCollection, HOLDINGS_RECORDS));
     List<JsonObject> holdings = holdingsCollection.getJsonArray(HOLDINGS_RECORDS).stream()
       .map(o -> ((JsonObject) o))
-      .collect(toList());
+      .toList();
 
-    List<String> locationIds = holdings.stream().map(holding ->  holding.getString(HOLDING_PERMANENT_LOCATION_ID)).collect(toList());
+    List<String> locationIds = holdings.stream().map(holding ->  holding.getString(HOLDING_PERMANENT_LOCATION_ID)).toList();
 
     JsonObject holdingsRecJson = new JsonObject();
-    holdingsRecJson.put(InventoryManager.HOLDING_INSTANCE_ID, oldInstanceId);
-    holdingsRecJson.put(InventoryManager.HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
+    holdingsRecJson.put(HOLDING_INSTANCE_ID, oldInstanceId);
+    holdingsRecJson.put(HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
 
     doReturn(succeededFuture(holdingIdExp)).when(restClient).put(any(RequestEntry.class), any(JsonObject.class), eq(requestContext));
 
-    inventoryManager.updateInstanceForHoldingRecords(List.of(holdingsRecJson), newInstanceId, requestContext).result();
+    inventoryHoldingManager.updateInstanceForHoldingRecords(List.of(holdingsRecJson), newInstanceId, requestContext).result();
 
-    assertThat(holdingsRecJson.getString(InventoryManager.HOLDING_INSTANCE_ID), equalTo(newInstanceId));
+    assertThat(holdingsRecJson.getString(HOLDING_INSTANCE_ID), equalTo(newInstanceId));
     verify(restClient, times(1)).put(any(RequestEntry.class), any(JsonObject.class), eq(requestContext));
   }
 
@@ -828,22 +688,60 @@ public class InventoryManagerTest {
     String holdingIdExp = extractId(getFirstObjectFromResponse(holdingsCollection, HOLDINGS_RECORDS));
     List<JsonObject> holdings = holdingsCollection.getJsonArray(HOLDINGS_RECORDS).stream()
       .map(o -> ((JsonObject) o))
-      .collect(toList());
+      .toList();
 
-    List<String> locationIds = holdings.stream().map(holding ->  holding.getString(HOLDING_PERMANENT_LOCATION_ID)).collect(toList());
+    List<String> locationIds = holdings.stream().map(holding ->  holding.getString(HOLDING_PERMANENT_LOCATION_ID)).toList();
     Location location = new Location().withHoldingId(holdingIdExp).withQuantity(1).withQuantityPhysical(1);
 
     JsonObject holdingsRecJson = new JsonObject();
-    holdingsRecJson.put(InventoryManager.HOLDING_INSTANCE_ID, instanceId);
-    holdingsRecJson.put(InventoryManager.HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
+    holdingsRecJson.put(HOLDING_INSTANCE_ID, instanceId);
+    holdingsRecJson.put(HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
 
     doReturn(succeededFuture(holdingsCollection)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
 
-    JsonObject holdingIdAct = inventoryManager.getOrCreateHoldingsJsonRecord(instanceId, location, requestContext).result();
+    JsonObject holdingIdAct = inventoryHoldingManager.getOrCreateHoldingsJsonRecord(null, instanceId, location, requestContext).result();
 
     assertThat(holdingIdAct.size(), equalTo(holdingsCollection.size()));
     verify(restClient, times(0)).postJsonObjectAndGetId(any(RequestEntry.class), any(JsonObject.class), eq(requestContext));
     verify(restClient, times(1)).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
+  }
+
+  @Test
+  void shouldReturnHoldingsByLocationTenants(VertxTestContext vertxTestContext) {
+    // given
+    CompositePoLine poLine = new CompositePoLine()
+      .withId("ID")
+      .withPoLineNumber("number")
+      .withLocations(List.of(
+        new Location().withHoldingId("H1").withTenantId("T1"),
+        new Location().withHoldingId("H2").withTenantId("T2"),
+        new Location().withHoldingId("H3").withTenantId("T2")
+      ));
+
+    JsonObject holdings1 = createHoldingsCollection("H1");
+    JsonObject holdings2 = createHoldingsCollection("H2", "H3");
+    doReturn(succeededFuture(holdings1)).when(restClient).getAsJsonObject(any(RequestEntry.class), RequestContextMatcher.matchTenant("T1"));
+    doReturn(succeededFuture(holdings2)).when(restClient).getAsJsonObject(any(RequestEntry.class), RequestContextMatcher.matchTenant("T2"));
+
+    // when
+    var holdingsByTenants = inventoryHoldingManager.getHoldingsByLocationTenants(poLine, requestContext);
+
+    // then
+    vertxTestContext.assertComplete(HelperUtils.combineResultListsOnSuccess(holdingsByTenants.values()))
+      .onComplete(result -> {
+        List<JsonObject> holdings = result.result();
+        assertEquals(3, holdings.size());
+        verify(restClient, times(1)).getAsJsonObject(any(RequestEntry.class), RequestContextMatcher.matchTenant("T1"));
+        verify(restClient, times(1)).getAsJsonObject(any(RequestEntry.class), RequestContextMatcher.matchTenant("T2"));
+        vertxTestContext.completeNow();
+      });
+
+  }
+
+  @NotNull
+  private static JsonObject createHoldingsCollection(String... holdingIds) {
+    List<JsonObject> holdings = Stream.of(holdingIds).map(id -> new JsonObject(Map.of(ID, id))).toList();
+    return new JsonObject(Map.of("holdingsRecords", new JsonArray(holdings)));
   }
 
   @Test
@@ -853,18 +751,18 @@ public class InventoryManagerTest {
     String holdingIdExp = extractId(getFirstObjectFromResponse(holdingsCollection, HOLDINGS_RECORDS));
     List<JsonObject> holdings = holdingsCollection.getJsonArray(HOLDINGS_RECORDS).stream()
       .map(o -> ((JsonObject) o))
-      .collect(toList());
+      .toList();
 
-    List<String> locationIds = holdings.stream().map(holding ->  holding.getString(HOLDING_PERMANENT_LOCATION_ID)).collect(toList());
+    List<String> locationIds = holdings.stream().map(holding ->  holding.getString(HOLDING_PERMANENT_LOCATION_ID)).toList();
     Location location = new Location().withHoldingId(holdingIdExp).withQuantity(1).withQuantityPhysical(1);
 
     JsonObject holdingsRecJson = new JsonObject();
-    holdingsRecJson.put(InventoryManager.HOLDING_INSTANCE_ID, instanceId);
-    holdingsRecJson.put(InventoryManager.HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
+    holdingsRecJson.put(HOLDING_INSTANCE_ID, instanceId);
+    holdingsRecJson.put(HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
 
     doReturn(Future.failedFuture(new HttpException(NOT_FOUND, "Not_Found")))
       .when(restClient).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
-    var future = inventoryManager.getOrCreateHoldingsJsonRecord(instanceId, location, requestContext);
+    var future = inventoryHoldingManager.getOrCreateHoldingsJsonRecord(null, instanceId, location, requestContext);
     vertxTestContext.assertFailure(future)
       .onComplete(completionException -> {
         HttpException httpException = (HttpException) completionException.cause();
@@ -884,65 +782,27 @@ public class InventoryManagerTest {
     String holdingIdExp = extractId(firstHoldingJson);
     List<JsonObject> holdings = holdingsCollection.getJsonArray(HOLDINGS_RECORDS).stream()
       .map(o -> ((JsonObject) o))
-      .collect(toList());
+      .toList();
 
-    List<String> locationIds = holdings.stream().map(holding -> holding.getString(HOLDING_PERMANENT_LOCATION_ID)).collect(toList());
+    List<String> locationIds = holdings.stream().map(holding -> holding.getString(HOLDING_PERMANENT_LOCATION_ID)).toList();
     Location location = new Location().withHoldingId(holdingIdExp).withQuantity(1).withQuantityPhysical(1);
 
     JsonObject holdingsRecJson = new JsonObject();
     holdingsRecJson.put(ID, holdingIdExp);
-    holdingsRecJson.put(InventoryManager.HOLDING_INSTANCE_ID, instanceId);
-    holdingsRecJson.put(InventoryManager.HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
+    holdingsRecJson.put(HOLDING_INSTANCE_ID, instanceId);
+    holdingsRecJson.put(HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
 
     JsonObject holdingsRecJsonColl = new JsonObject();
     holdingsRecJsonColl.put(HOLDINGS_RECORDS, new JsonArray().add(holdingsRecJson));
 
     doReturn(succeededFuture(holdingsRecJson)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(true), eq(requestContext));
     doReturn(succeededFuture(holdingsRecJsonColl)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
-    String holdingIdAct = inventoryManager.getOrCreateHoldingRecordByInstanceAndLocation(instanceId, location, requestContext).result();
+    String holdingIdAct = inventoryHoldingManager.getOrCreateHoldingRecordByInstanceAndLocation(instanceId, location, requestContext).result();
 
     assertThat(holdingIdAct, equalTo(holdingIdExp));
     verify(restClient, times(1)).getAsJsonObject(any(RequestEntry.class), eq(true), eq(requestContext));
     verify(restClient, times(1)).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
     verify(restClient, times(0)).postJsonObjectAndGetId(any(RequestEntry.class), any(JsonObject.class), eq(requestContext));
-  }
-
-  @Test
-  void shouldCheckIfTheHoldingWillBeRetrievedByIdAndWasNotFoundByInstanceIdAndLOcationThenCreateNewHolding(VertxTestContext vertxTestContext) throws IOException {
-    String instanceId = UUID.randomUUID().toString();
-    JsonObject holdingsCollection = new JsonObject(getMockData(HOLDINGS_OLD_NEW_PATH));
-    JsonObject firstHoldingJson = getFirstObjectFromResponse(holdingsCollection, HOLDINGS_RECORDS);
-    String firstHoldingIdExp = extractId(firstHoldingJson);
-    List<JsonObject> holdings = holdingsCollection.getJsonArray(HOLDINGS_RECORDS).stream()
-      .map(o -> ((JsonObject) o))
-      .collect(toList());
-
-    List<String> locationIds = holdings.stream().map(holding -> holding.getString(HOLDING_PERMANENT_LOCATION_ID)).collect(toList());
-    Location location = new Location().withHoldingId(firstHoldingIdExp).withQuantity(1).withQuantityPhysical(1);
-
-    JsonObject holdingsRecJson = new JsonObject();
-    holdingsRecJson.put(ID, firstHoldingIdExp);
-    holdingsRecJson.put(InventoryManager.HOLDING_INSTANCE_ID, instanceId);
-    holdingsRecJson.put(InventoryManager.HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
-
-    JsonObject holdingsRecJsonColl = new JsonObject();
-    holdingsRecJsonColl.put(HOLDINGS_RECORDS, new JsonArray());
-
-    doReturn(succeededFuture(firstHoldingJson)).when(restClient).postJsonObject(any(RequestEntry.class), any(JsonObject.class), eq(requestContext));
-    doReturn(succeededFuture(firstHoldingJson)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(true), eq(requestContext));
-    doReturn(succeededFuture(holdingsRecJsonColl)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
-    doReturn(succeededFuture(HOLDINGS_SOURCE_ID_RESPONSE)).when(inventoryManager).getEntryId(eq(HOLDINGS_SOURCES), any(ErrorCodes.class), eq(requestContext));
-
-    var future = inventoryManager.getOrCreateHoldingRecordByInstanceAndLocation(instanceId, location, requestContext);
-
-    vertxTestContext.assertComplete(future)
-      .onComplete(res -> {
-        assertThat(res.result(), equalTo(firstHoldingIdExp));
-        verify(restClient, times(1)).postJsonObject(any(RequestEntry.class), any(JsonObject.class), eq(requestContext));
-        verify(restClient, times(1)).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
-        vertxTestContext.completeNow();
-      });
-
   }
 
   @Test
@@ -953,15 +813,15 @@ public class InventoryManagerTest {
     String firstHoldingIdExp = extractId(firstHoldingJson);
     List<JsonObject> holdings = holdingsCollection.getJsonArray(HOLDINGS_RECORDS).stream()
       .map(o -> ((JsonObject) o))
-      .collect(toList());
+      .toList();
 
-    List<String> locationIds = holdings.stream().map(holding -> holding.getString(HOLDING_PERMANENT_LOCATION_ID)).collect(toList());
+    List<String> locationIds = holdings.stream().map(holding -> holding.getString(HOLDING_PERMANENT_LOCATION_ID)).toList();
     Location location = new Location().withLocationId(locationIds.get(0)).withQuantity(1).withQuantityPhysical(1);
 
     JsonObject holdingsRecJson = new JsonObject();
     holdingsRecJson.put(ID, firstHoldingIdExp);
-    holdingsRecJson.put(InventoryManager.HOLDING_INSTANCE_ID, instanceId);
-    holdingsRecJson.put(InventoryManager.HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
+    holdingsRecJson.put(HOLDING_INSTANCE_ID, instanceId);
+    holdingsRecJson.put(HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
 
     JsonObject holdingsRecJsonColl = new JsonObject();
     holdingsRecJsonColl.put(HOLDINGS_RECORDS, new JsonArray().add(holdingsRecJson));
@@ -969,7 +829,7 @@ public class InventoryManagerTest {
     doReturn(succeededFuture(holdingsRecJson)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(true), eq(requestContext));
     doReturn(succeededFuture(holdingsRecJsonColl)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(requestContext));
 
-    String holdingIdAct = inventoryManager.getOrCreateHoldingRecordByInstanceAndLocation(instanceId, location, requestContext).result();
+    String holdingIdAct = inventoryHoldingManager.getOrCreateHoldingRecordByInstanceAndLocation(instanceId, location, requestContext).result();
 
     assertThat(holdingIdAct, equalTo(firstHoldingIdExp));
     verify(restClient, times(0)).postJsonObjectAndGetId(any(RequestEntry.class), any(JsonObject.class), eq(requestContext));
@@ -977,39 +837,48 @@ public class InventoryManagerTest {
   }
 
   @Test
-  void shouldCreateNewHoldingIfHoldingIsAbsentByIdAndRetrievedIfInTheLocationOnlyLocationIdPresent(VertxTestContext vertxTestContext) throws IOException {
+  void shouldNotCreateShadowCopyWhenItAlreadyExist() {
     String instanceId = UUID.randomUUID().toString();
-    JsonObject holdingsCollection = new JsonObject(getMockData(HOLDINGS_OLD_NEW_PATH));
-    JsonObject firstHoldingJson = getFirstObjectFromResponse(holdingsCollection, HOLDINGS_RECORDS);
-    String firstHoldingIdExp = extractId(firstHoldingJson);
-    List<JsonObject> holdings = holdingsCollection.getJsonArray(HOLDINGS_RECORDS).stream()
-      .map(o -> ((JsonObject) o))
-      .collect(toList());
+    Optional<ConsortiumConfiguration> configuration = Optional.of(new ConsortiumConfiguration(UUID.randomUUID().toString(), UUID.randomUUID().toString()));
+    doReturn(succeededFuture(configuration)).when(consortiumConfigurationService).getConsortiumConfiguration(requestContext);
+    doReturn(succeededFuture(JsonObject.mapFrom(new Instance()))).when(restClient).getAsJsonObject(any(RequestEntry.class), anyBoolean(), any(RequestContext.class));
 
-    List<String> locationIds = holdings.stream().map(holding -> holding.getString(HOLDING_PERMANENT_LOCATION_ID)).collect(toList());
-    Location location = new Location().withLocationId(locationIds.get(0)).withQuantity(1).withQuantityPhysical(1);
+    inventoryInstanceManager.createShadowInstanceIfNeeded(instanceId, requestContext).result();
 
-    JsonObject holdingsRecJson = new JsonObject();
-    holdingsRecJson.put(ID, firstHoldingIdExp);
-    holdingsRecJson.put(InventoryManager.HOLDING_INSTANCE_ID, instanceId);
-    holdingsRecJson.put(InventoryManager.HOLDING_PERMANENT_LOCATION_ID, locationIds.get(0));
+    verifyNoInteractions(sharingInstanceService);
+  }
 
-    JsonObject holdingsRecJsonColl = new JsonObject();
-    holdingsRecJsonColl.put(HOLDINGS_RECORDS, new JsonArray());
+  @Test
+  void shouldNotCreateShadowCopyWhenInstanceIdNull() {
+    Optional<ConsortiumConfiguration> configuration = Optional.of(new ConsortiumConfiguration(UUID.randomUUID().toString(), UUID.randomUUID().toString()));
+    doReturn(succeededFuture(configuration)).when(consortiumConfigurationService).getConsortiumConfiguration(requestContext);
+    doReturn(succeededFuture(JsonObject.mapFrom(new Instance()))).when(restClient).getAsJsonObject(any(RequestEntry.class), anyBoolean(), any(RequestContext.class));
 
-    doReturn(succeededFuture(firstHoldingJson)).when(restClient).postJsonObject(any(RequestEntry.class), any(JsonObject.class), any(RequestContext.class));
-    doReturn(succeededFuture(holdingsRecJson)).when(restClient).getAsJsonObject(any(RequestEntry.class), eq(true), any(RequestContext.class));
-    doReturn(succeededFuture(holdingsRecJsonColl)).when(restClient).getAsJsonObject(any(RequestEntry.class), any(RequestContext.class));
-    doReturn(succeededFuture(HOLDINGS_SOURCE_ID_RESPONSE)).when(inventoryManager).getEntryId(eq(HOLDINGS_SOURCES), any(ErrorCodes.class), any(RequestContext.class));
+    inventoryInstanceManager.createShadowInstanceIfNeeded(null, requestContext).result();
 
-    var future = inventoryManager.getOrCreateHoldingRecordByInstanceAndLocation(instanceId, location, requestContext);
+    verifyNoInteractions(sharingInstanceService);
+  }
 
-    vertxTestContext.assertComplete(future)
-      .onComplete(res -> {
-        assertThat(res.result(), equalTo(firstHoldingIdExp));
-        vertxTestContext.completeNow();
-      });
+  @Test
+  void shouldNotCreateShadowCopyWhenConsortiumConfigurationIsNull() {
+    String instanceId = UUID.randomUUID().toString();
+    doReturn(succeededFuture(null)).when(consortiumConfigurationService).getConsortiumConfiguration(requestContext);
 
+    inventoryInstanceManager.createShadowInstanceIfNeeded(instanceId, requestContext).result();
+
+    verifyNoInteractions(sharingInstanceService);
+  }
+
+  @Test
+  void shouldCreateShadowInstance() {
+    String instanceId = UUID.randomUUID().toString();
+    Optional<ConsortiumConfiguration> configuration = Optional.of(new ConsortiumConfiguration(UUID.randomUUID().toString(), UUID.randomUUID().toString()));
+    doReturn(succeededFuture(configuration)).when(consortiumConfigurationService).getConsortiumConfiguration(requestContext);
+    doReturn(succeededFuture(null)).when(restClient).getAsJsonObject(any(RequestEntry.class), anyBoolean(), any(RequestContext.class));
+
+    inventoryInstanceManager.createShadowInstanceIfNeeded(instanceId, requestContext).result();
+
+    verify(sharingInstanceService).createShadowInstance(instanceId, configuration.get(), requestContext);
   }
 
   /**
@@ -1020,10 +889,32 @@ public class InventoryManagerTest {
     public ConfigurationEntriesService configurationEntriesService() {
       return mock(ConfigurationEntriesService.class);
     }
+    @Bean
+    public ConfigurationEntriesCache configurationEntriesCache() {
+      return mock(ConfigurationEntriesCache.class);
+    }
 
     @Bean
-    public PieceStorageService pieceStorageService() {
-      return mock(PieceStorageService.class);
+    public InventoryCache inventoryCache() {
+      return mock(InventoryCache.class);
+    }
+
+    @Bean
+    public InventoryService inventoryService() {
+      return mock(InventoryService.class);
+    }
+
+    @Bean
+    public ConsortiumConfigurationService consortiumConfigurationService() {
+      return mock(ConsortiumConfigurationService.class);
+    }
+
+    @Bean
+    public PurchaseOrderStorageService purchaseOrderStorageService() {return mock(PurchaseOrderStorageService.class);}
+
+    @Bean
+    public SharingInstanceService sharingInstanceService() {
+      return mock(SharingInstanceService.class);
     }
 
     @Bean
@@ -1032,9 +923,30 @@ public class InventoryManagerTest {
     }
 
     @Bean
-    public InventoryManager inventoryManager(RestClient restClient, ConfigurationEntriesService configurationEntriesService,
-                                             PieceStorageService pieceStorageService) {
-      return spy(new InventoryManager(restClient, configurationEntriesService, pieceStorageService));
+    public InventoryItemManager inventoryItemManager(RestClient restClient,
+                                                     ConfigurationEntriesCache configurationEntriesCache,
+                                                     InventoryCache inventoryCache,
+                                                     ConsortiumConfigurationService consortiumConfigurationService,
+                                                     PurchaseOrderStorageService purchaseOrderStorageService) {
+      return spy(new InventoryItemManager(restClient, configurationEntriesCache, inventoryCache,
+        consortiumConfigurationService, purchaseOrderStorageService));
+    }
+
+    @Bean
+    public InventoryHoldingManager inventoryHoldingManager(RestClient restClient,
+                                                           ConfigurationEntriesCache configurationEntriesCache,
+                                                           InventoryCache inventoryCache) {
+      return spy(new InventoryHoldingManager(restClient, configurationEntriesCache, inventoryCache));
+    }
+
+    @Bean
+    public InventoryInstanceManager inventoryInstanceManager(RestClient restClient,
+                                                             ConfigurationEntriesCache configurationEntriesCache,
+                                                             InventoryCache inventoryCache,
+                                                             ConsortiumConfigurationService consortiumConfigurationService,
+                                                             SharingInstanceService sharingInstanceService) {
+      return spy(new InventoryInstanceManager(restClient, configurationEntriesCache, inventoryCache, sharingInstanceService, consortiumConfigurationService));
     }
   }
+
 }
